--- a/牛客刷题题目/前端面试-业务场景.md
+++ b/牛客刷题题目/前端面试-业务场景.md
@@ -840,5 +840,1370 @@ CSS Sprites 技术就是将这些小icon合并成一张图片,只需要加载一
 
 ---
 
+#### 5. 关于样式规范统一化的实现
 
+**参考答案**：
+
+css 指层叠样式表 (Cascading Style Sheets)，定义如何显示 [html](http://www.fly63.com/tag/html) 元素，但由于 [css](http://www.fly63.com/tag/css) 天生全局性，随着项目复杂度增加，极易出现样式覆盖以及其它的问题。
+
+##### **通用规范**
+
+文件编码
+
+- 为了避免内容乱码，统一使用 UTF-8 编码保存。
+- 样式文件第一行设置字符集为 UTF-8
+
+```css
+@charset 'UTF-8'; /* 注意字符集说明应在第一行 */
+```
+
+缩进规范
+
+统一使用两个空格缩进
+
+##### **初始化规范**
+
+各[浏览器]厂商的初始样式都不一样，为了消除不同[浏览器]对 [html]文本呈现的差异，我们常引入一些初始化样式，如 normalize.css、reset.css 等，当对于这些样式的引入我们需要注意下面几种情况：
+
+- 不使用 UI [框架]，由零开始搭建 从零开始搭建的情况下，进行样式初始化，在项目最开始的时候就引入，不要在开发中途引入，避免不可预知的样式冲突。
+- 不使用 UI [框架]，但使用了部分插件 插件往往都带有自己特有的样式，如富文本插件，在开发中途使用初始化样式有可能导致样式错乱，所以不建议大范围的初始化，只需简单进行初始化即可。
+
+```css
+* {
+  padding: 0;
+  margin: 0;
+}
+
+```
+
+- 已使用 UI 框架 在明确知道需要使用 UI 框架的时候，不使用第三方初始化样式，不管是在项目开始前还是进行中，因为 UI 框架一般都自带初始化，额外引入了反而会影响原有效果。
+
+##### **代码规范**
+
+命名规范
+
+class 应以功能或内容命名，不以表现形式命名 class 与 id 单词字母小写，多个单词组成时，采用中划线-分隔 使用唯一的 id 作为 JavaScript hook, 同时避免创建无样式信息的 class
+
+代码风格
+
+统一使用展开格式，不推荐紧凑格式
+
+```css
+/* 展开格式 */
+.test {
+  color: red;
+  font-size: 12px;
+}
+
+/* 紧凑格式 */
+.test {
+  color: red;  font-size: 12px;
+}
+
+```
+
+统一两个空格缩进
+
+属性声明结尾加分号
+
+选择器与左括号之间一个空格，属性冒号后一个空格
+
+```css
+/* 推荐 */
+.test {
+  color: red;
+  font-size: 12px;
+}
+
+/* 不推荐 */
+.test{
+  color:red;
+  font-size:12px;
+}
+
+```
+
+**不要为 0 指明单位**
+
+颜色值和属性值十六进制数值能用简写的尽量用简写
+
+```css
+/* 推荐 */
+.test {
+  color: #fff;
+}
+
+/* 不推荐 */
+.test {
+  color: #ffffff;
+}
+
+```
+
+引号使用
+
+url() 、属性选择符、属性值使用单引号。
+
+清除浮动
+
+当元素需要撑起高度以包含内部的浮动元素时，通过对伪类设置 clear 或触发 BFC 的方式进行 clearfix。尽量不使用增加空标签的方式。
+
+触发 BFC 的方式很多，常见的有：
+
+> float 非 none
+> position 非 static
+> overflow 非 visible
+
+**字体规范**
+
+对外商用网站，不要用font-face引入微软雅黑字体，避免侵权（包括图片内容）
+
+需要在 Windows 平台显示的中文内容，其字号应不小于 12px
+
+网站上使用 微软雅黑 字体有三种形式：
+
+> 1、【侵权】图片中使用 微软雅黑 字体，比如网站头图
+> 2、【安全】网站 CSS 用 font-family 声明网站使用 微软雅黑 字体，比如文章标题和正文
+> 3、【侵权】网站通过 font-face 引用 微软雅黑 ，这种方式不常见
+
+**选择器规范**
+
+在严格遵照BEM(Block Element Modifier)时，建议只使用类选择器，但 BEM 书写麻烦，所以建议如下
+
+- 禁用通用选择器 *
+- 不使用无具体语义定义的标签选择器
+
+**属性顺序**
+
+CSS 属性顺序是 CSS 良好编码风格的一部分，有助于提高代码可读性，便于发现代码问题，有利于团队合作，但在项目中发现部分同学在书写属性顺序时较为随意，想到一个属性就写一个。
+
+建议使用下列顺序进行书写
+
+1. 定位属性（position、display、float、left、right）
+2. 尺寸属性（width、height、padding、margin、border）
+3. 字体属性（color、font、text-align）
+4. 其他属性（background、cursor、outline）
+
+目的是在浏览代码时，能逐步清晰目标元素的效果。
+
+```css
+.test {
+  display: block;
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 100px;
+  margin: 0 10px;
+  padding: 20px 0;
+  font-size: 12px;
+  color: #333;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+```
+
+##### **注释规范**
+
+**单行注释**
+
+注释以 /* 开始，以 */ 结束,注释内不能嵌套注释，注释内容前后空一个空格。
+
+```css
+/* 推荐的单行注释 */
+/*不推荐的单行注释*/
+```
+
+*注：在 sass 和 less 等预处理语言上也可以使用双斜线注释，但编译后注释内容不会出现在 css 文件中，所以建议统一使用/\* */注释。*
+
+**模块注释**
+
+有时候我们需要对一个模块(一段代码块)进行功能性说明，并希望能明显区分其它代码，我们可以模块注释的方式。
+
+注释以 /* 开始，以 */ 结束，前后空一个空格，第一行填写描述，最后一行行填写分割线。
+
+```css
+/* 推荐的模块注释
+---------------------------------------------------- */
+/* 不推荐的模块注释 ---------------------------------------------------- */
+```
+
+**文件信息注释**
+
+如果需要对一个文件进行功能性说明，方便其他人快速明白该文件的作用，推荐在文件开头(字符集说明下)写入下列注释，注释内容包括文件描述、创建人、创建时间等。
+
+```css
+@charset "UTF-8";
+/**
+ * @desc 文件功能描述，方便其他人快速理解
+ * @author 创建人
+ * @date 创建时间
+ */
+
+```
+
+##### **覆盖规范**
+
+- 尽可能少用 importent
+- vue 单文件组件统一使用 css/less/sass scoped
+- 每个页面/组件需要有一个全局唯一的标识 id/class，属于它下面的样式都需要加上该唯一标识
+- 避免全局修改已有样式，必须具体到页面上(通过权重)
+- 禁用全匹配*选择器（特殊情况除外，如初始化）
+
+vue单文件组件修改样式不生效可使用 /deep/ 或 >>>
+
+##### **媒体查询**
+
+对于内部管理系统，商务多使用 ThinkPad 笔记本，屏幕分辨率为 1366*768。建议使用Resolution Test浏览器拓展进行浏览器窗口大小调试。
+
+常用尺寸如下
+
+| 大小    | 描述                |
+| :------ | :------------------ |
+| ≥1366px | 大屏幕 大桌面显示器 |
+| ≥1200px | 中等屏幕 桌面显示器 |
+| ≥920px  | 中等屏幕 桌面显示器 |
+| ≥768px  | 小屏幕 平板         |
+| <768px  | 超小屏幕 手机       |
+
+优先 PC 端
+
+默认按最大尺寸进行布局，当尺寸缩小时逐步变成移动端布局
+
+```css
+body {
+  background: gray;
+}
+@media screen and (max-width: 1366px) {
+  body {
+    background: red;
+  }
+}
+@media screen and (max-width: 1200px) {
+  body {
+    background: yellow;
+  }
+}
+@media screen and (max-width: 920px) {
+  body {
+    background: green;
+  }
+}
+@media screen and (max-width: 768px) {
+  body {
+    background: black;
+  }
+}
+
+```
+
+优先移动端
+
+默认按最小尺寸进行布局，当尺寸放大时逐步变成 PC 端布局
+
+```css
+body {
+  background: gray;
+}
+@media (min-width: 768px) {
+  body {
+    background: red;
+  }
+}
+@media (min-width: 920px) {
+  body {
+    background: green;
+  }
+}
+@media (min-width: 1200px) {
+  body {
+    background: yellow;
+  }
+}
+@media (min-width: 1366px) {
+  body {
+    background: red;
+  }
+}
+
+```
+
+如果需要做打印样式进行适配，需要使用@media *print*
+
+```css
+@media print {
+  body {
+    background: #fff;
+  }
+}
+```
+
+##### **单位规范**
+
+CSS 单位有两种，分别是绝对单位和相对单位。
+
+- 常用绝对单位
+  - px：像素 (计算机屏幕上的一个点)
+  - cm：厘米
+  - in：英寸
+  - pt：磅 (1 pt 等于 1/72 英寸)
+- 常用相对单位
+  - %：父元素百分比
+  - vw：视口宽度百分比
+  - vh：视口高度百分比
+  - em：当前字体倍数
+  - rem：根元素字体倍数
+  - \* rpx：微信小程序专用，规定屏幕宽为 750rpx
+
+使用较多的单位有 px、%、rem 三种，*建议 PC 端用 px 单位、移动端用 rem，需要具体控制尺寸还是使用 px*
+
+备注：如果需要计算不同单位下的值，可以使用 css3 方法 calc()_
+
+**8. 兼容性规范**
+
+私有属性的使用
+
+正是由于浏览器厂商的不同，导致了一些样式需要加前缀才生效，下面的常见的浏览器内核和前缀
+
+| 浏览器         | 内核    | 前缀     |
+| :------------- | :------ | :------- |
+| Firefox        | Gecko   | -moz-    |
+| Chrome         | WebKit  | -webkit- |
+| IE             | Trident | -ms-     |
+| Safari         | WebKit  | -webkit- |
+| Opera          | Presto  | -o-      |
+| 国内知名浏览器 | WebKit  | -webkit- |
+| 常见手机浏览器 | WebKit  | -webkit- |
+
+CSS3 浏览器私有前缀在前，标准前缀在后
+
+```css
+.test {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
+}
+
+```
+
+备注：在 webpack环境下，可以使用 postcss-loader 自动添加私有前缀_
+
+----
+
+#### 6. 页面跳转的方式
+
+**参考答案**：
+
+**1.window.location.href方式**
+
+```html
+<script language="JavaScript" type="text/javascript">
+  window.location.href="http://www.dayanmei.com/";
+</script>
+```
+
+**2.window.navigate方式跳转**
+
+```html
+<script language="javascript">
+  window.navigate("top.jsp");
+</script>
+```
+
+**3.window.loction.replace方式实现页面跳转，注意跟第一种方式的区别**
+
+```html
+<script language="javascript">
+  window.location.replace("http://www.dayanmei.com");
+</script>
+```
+
+有3个jsp页面（1.jsp, 2.jsp, 3.jsp），进系统默认的是1.jsp ，当我进入2.jsp的时候， 2.jsp里面用window.location.replace("3.jsp");与用window.location.href ("3.jsp");
+
+从用户界面来看是没有什么区别的，但是当3.jsp页面有一个"返回"按钮，调用window.history.Go(-1); wondow.history.back();方法的时候，一点这个返回按钮就要返回2.jsp页面的话，区别就出来了，当用 window.location.replace("3.jsp");连到3.jsp页面的话，3.jsp页面中的调用 window.history.go(-1);wondow.history.back();方法是不好用的，会返回到1.jsp 。
+
+**4.self.location方式实现页面跳转，和下面的top.location有小小区别**
+
+```html
+<script language="JavaScript">
+      self.location='top.htm';
+</script>
+```
+
+**5.top.location**
+
+```html
+<script language="javascript">
+      top.location='xx.jsp';
+</script>
+```
+
+**6.不推荐这种方式跳转**
+
+```html
+<script language="javascript">
+  alert("返回");
+  window.history.back(-1);
+</script>
+```
+
+**在php程序中,这种方式跳转前面不能有任何输出**
+
+```php
+<?php
+    header("url.php");
+?>
+```
+
+----
+
+#### 7. 怎么监听内容的改变：监听oninput
+
+**参考答案**：
+
+**原生方法**
+
+onchange事件
+
+```html
+<input type="text" onchange="onc(this)">
+<script>
+	function onc(data){
+    	console.log(data.value);
+	}    
+</script>
+
+```
+
+onchange事件在内容改变且失去焦点的时候触发。即，失去焦点了内容未变不触发，内容变了未失去焦点也不实时触发。
+**js直接更改value值时不触发**
+
+**oninput事件**
+
+```html
+<input id="inp" type="text" oninput="inp(this)">
+function inp(data) {
+    console.log(data.value)
+}
+
+```
+
+oninput事件在输入内容改变的时候实时触发。oninput事件是IE之外的大多数浏览器支持的事件，在value改变时实时触发。
+**js直接更改value值时不触发。**
+
+**onpropertychange事件**
+
+onpropertychange事件是实时触发，每增加或删除一个字符就会触发，通过js改变也会触发该事件，**但是该事件是IE专有。**
+当input设置为disable=true后，不会触发。
+
+**oninput事件与onpropertychange事件的区别：**
+
+onpropertychange事件是任何属性改变都会触发，而oninput却只在value改变时触发，oninput要通过addEventListener()来注册，onpropertychange注册方法与一般事件相同。
+
+**oninput与onpropertychange联合使用**
+
+oninput 是 HTML5 的标准事件，对于检测 textarea, input:text, input:password 和 input:search 这几个元素通过用户界面发生的内容变化非常有用，在内容修改后立即被触发，不像 onchange 事件需要失去焦点才触发。oninput 事件在 IE9 以下版本不支持，需要使用 IE 特有的 onpropertychange 事件替代，这个事件在用户界面改变或者使用脚本直接修改内容两种情况下都会触发，有以下几种情况：
+
+修改了 input:checkbox 或者 input:radio 元素的选择中状态， checked 属性发生变化。
+修改了 input:text 或者 textarea 元素的值，value 属性发生变化。
+修改了 select 元素的选中项，selectedIndex 属性发生变化。
+在监听到 onpropertychange 事件后，可以使用 event 的 propertyName 属性来获取发生变化的属性名称。
+
+集合 oninput & onpropertychange 监听输入框内容变化的示例代码如下：
+
+// Firefox, Google Chrome, Opera, Safari, Internet Explorer from version 9
+
+```js
+function OnInput (event) {
+    alert ("The new content: " + event.target.value);
+}
+
+```
+
+// Internet Explorer
+
+```js
+function OnPropChanged (event) {
+    if (event.propertyName.toLowerCase () == "value") {
+        alert ("The new content: " + event.srcElement.value);
+    }
+}
+
+<input type="text" oninput="OnInput (event)" onpropertychange="OnPropChanged (event)" value="Te
+
+```
+
+-----
+
+#### 8. 如何触发下拉刷新、上拉加载
+
+**参考答案**：
+
+**下拉刷新**
+
+实现下拉刷新主要分为三步：
+
+- 监听原生touchstart事件，记录其初始位置的值，e.touches[0].pageY；
+- 监听原生touchmove事件，记录并计算当前滑动的位置值与初始位置值的差值，大于0表示向下拉动，并借助CSS3的translateY属性使元素跟随手势向下滑动对应的差值，同时也应设置一个允许滑动的最大值；
+- 监听原生touchend事件，若此时元素滑动达到最大值，则触发callback，同时将translateY重设为0，元素回到初始位置。
+
+html
+
+```html
+<main>
+    <p class="refreshText"></p>
+    <ul id="refreshContainer">
+        <li>111</li>
+        <li>222</li>
+        <li>333</li>
+        <li>444</li>
+        <li>555</li>
+        ...
+    </ul>
+</main>
+
+```
+
+javascript
+
+```js
+(function(window) {
+    var _element = document.getElementById('refreshContainer'),
+      _refreshText = document.querySelector('.refreshText'),
+      _startPos = 0,
+      _transitionHeight = 0;
+
+    _element.addEventListener('touchstart', function(e) {
+        console.log('初始位置：', e.touches[0].pageY);
+        _startPos = e.touches[0].pageY;
+        _element.style.position = 'relative';
+        _element.style.transition = 'transform 0s';
+    }, false);
+
+    _element.addEventListener('touchmove', function(e) {
+        console.log('当前位置：', e.touches[0].pageY);
+        _transitionHeight = e.touches[0].pageY - _startPos;
+
+        if (_transitionHeight > 0 && _transitionHeight < 60) {
+            _refreshText.innerText = '下拉刷新';
+            _element.style.transform = 'translateY('+_transitionHeight+'px)';
+
+            if (_transitionHeight > 55) {
+              _refreshText.innerText = '释放更新';
+            }
+        }                
+    }, false);
+
+    _element.addEventListener('touchend', function(e) {
+        _element.style.transition = 'transform 0.5s ease 1s';
+        _element.style.transform = 'translateY(0px)';
+        _refreshText.innerText = '更新中...';
+
+        // todo...
+
+    }, false);
+})(window);
+
+```
+
+在下拉到松手的过程中，经历了三个状态：
+
+- 当前手势滑动位置与初始位置差值大于零时，提示正在进行下拉刷新操作；
+- 下拉到一定值时，显示松手释放后的操作提示；
+- 下拉到达设定最大值松手时，执行回调，提示正在进行更新操作。
+
+**上拉加载**
+
+上拉加载更多数据是在页面滚动时触发的动作，一般是页面滚动到底部时触发，也可以选择在滚动到一定位置的时候触发。
+
+以滚动到页面底部为例。实现原理是分别获得当前滚动条的scrollTop值、当前可视范围的高度值clientHeight以及文档的总高度scrollHeight。当scrollTop和clientHeight的值之和大于等于scrollHeight时，触发callback。
+
+html
+
+```html
+<main>
+    <ul id="refreshContainer">
+        <li>111</li>
+        <li>222</li>
+        <li>333</li>
+        <li>444</li>
+        <li>555</li>
+        ...
+    </ul>
+    <p class="refreshText"></p>
+</main>
+<script>
+(function(window) {
+    // 获取当前滚动条的位置 
+    function getScrollTop() { 
+        var scrollTop = 0; 
+        if (document.documentElement && document.documentElement.scrollTop) { 
+            scrollTop = document.documentElement.scrollTop; 
+        } else if (document.body) { 
+            scrollTop = document.body.scrollTop; 
+        } 
+        return scrollTop; 
+    } 
+
+    // 获取当前可视范围的高度 
+    function getClientHeight() { 
+        var clientHeight = 0; 
+        if (document.body.clientHeight && document.documentElement.clientHeight) { 
+            clientHeight = Math.min(document.body.clientHeight, document.documentElement.clientHeight); 
+        } 
+        else { 
+            clientHeight = Math.max(document.body.clientHeight, document.documentElement.clientHeight); 
+        } 
+        return clientHeight; 
+    } 
+
+    // 获取文档完整的高度 
+    function getScrollHeight() { 
+        return Math.max(document.body.scrollHeight, document.documentElement.scrollHeight); 
+    }
+
+    var _text = document.querySelector('.refreshText'),
+      _container = document.getElementById('refreshContainer');
+
+    // 节流函数
+    var throttle = function(method, context){
+      clearTimeout(method.tId);
+      method.tId = setTimeout(function(){
+        method.call(context);
+      }, 300);
+    }
+
+    function fetchData() {
+        setTimeout(function() {
+            _container.insertAdjacentHTML('beforeend', '<li>new add...</li>');
+        }, 1000);
+    }
+
+    window.onscroll = function() {
+      if (getScrollTop() + getClientHeight() == getScrollHeight()) {
+          _text.innerText = '加载中...';
+          throttle(fetchData);
+      }
+    };
+
+})(window);
+</script>
+```
+
+页面绑定onscroll事件时加入了节流函数，其作用就是忽略滚动条300毫秒内的连续多次触发。
+
+-----
+
+#### 9. 扫描二维码登录的原理
+
+**参考答案**：
+
+1. **什么是二维码**
+
+> 二维码又称二维条码，常见的二维码为QR Code，QR全称Quick Response，是一个近几年来移动设备上超流行的一种编码方式，它比传统的Bar Code条形码能存更多的信息，也能表示更多的数据类型。----来自百度百科
+
+在商品上，一般都会有条形码，条形码也称为一维码，条形码只能表示一串数字。二维码要比条形码丰富很多，可以存储数字、字符串、图片、文件等，比如我们可以把[www.baidu.com](http://www.baidu.com/)存储在二维码中，扫码二维码我们就可以获取到百度的地址。
+
+2. **移动端基于 token 的认证机制**
+
+在了解扫码登录原理之前，有必要先了解移动端基于 token 的认证机制，对理解扫码登录原理还是非常有帮助的。基于 token 的认证机制跟我们常用的账号密码认证方式有较大的不同，安全系数比账号密码要高，如果每次验证都传入账号密码，那么被劫持的概率就变大了。
+
+基于 token 的认证机制流程图，如下图所示：
+
+![img](E:\pogject\学习笔记\image\js\基于 token 的认证机制流程图)
+
+基于 token 的认证机制，只有在第一次使用需要输入账号密码，后续使用将不在输入账号密码。**其实在登陆的时候不仅传入账号、密码，还传入了手机的设备信息。在服务端验证账号、密码正确后，服务端会做两件事**。
+
+- 第一，将账号与设备关联起来，在某种意义上，设备信息就代表着账号。
+
+- 第二，生成一个 token 令牌，并且在 token 与账号、设备关联，类似于key/value，token 作为 key ，账号、设备信息作为value，持久化在磁盘上。
+
+
+将 token 返回给移动端，移动端将 token 存入在本地，往后移动端都通过 token 访问服务端 API ，当然除了 token 之外，还需要携带设备信息，因为 token 可能会被劫持。带上设备信息之后，**就算 token 被劫持也没有关系，因为设备信息是唯一的**。
+
+这就是基于 token 的认证机制，将账号密码换成了 token、设备信息，从而提高了安全系数，可别小看这个 token ，token 是身份凭证，在扫码登录的时候也会用到。
+
+3. **二维码扫码登录的原理**
+
+好了，知道了移动端基于 token 的认证机制后，接下来就进入我们的主题：二维码扫码登陆的原理。先上二维码扫码登录的流程图：
+
+![img](E:\pogject\学习笔记\image\js\二维码扫码登录的原理)
+
+扫码登录可以分为三个阶段：**待扫描、已扫描待确认、已确认**。我们就一一来看看这三个阶段。
+
+**1、待扫描阶段**
+
+待扫描阶段也就是流程图中 1~5 阶段，即生成二维码阶段，这个阶段跟移动端没有关系，是 PC 端跟服务端的交互过程。
+
+首先 PC 端携带设备信息想服务端发起生成二维码请求，服务端会生成唯一的二维码 ID，你可以理解为 UUID，并且将 二维码 ID 跟 PC 设备信息关联起来，这跟移动端登录有点相似。
+
+PC 端接受到二维码 ID 之后，将二维码 ID 以二维码的形式展示，等待移动端扫码。此时在 PC 端会启动一个定时器，轮询查询二维码的状态。**如果移动端未扫描的话，那么一段时间后二维码将会失效。**
+
+**2、已扫描待确认阶段**
+
+流程图中第 6 ~ 10 阶段，我们在 PC 端登录微信时，手机扫码后，PC 端的二维码会变成已扫码，请在手机端确认。这个阶段是移动端跟服务端交互的过程。
+
+首先移动端扫描二维码，获取二维码 ID，**然后将手机端登录的信息凭证（token）和 二维码 ID 作为参数发送给服务端**，此时的手机一定是登录的，不存在没登录的情况。
+
+服务端接受请求后，会将 token 与二维码 ID 关联，为什么需要关联呢？你想想，我们使用微信时，移动端退出， PC 端是不是也需要退出，这个关联就有点把子作用了。然后会**生成一个一次性 token，这个 token 会返回给移动端，一次性 token 用作确认时候的凭证**。
+
+PC 端的定时器，会轮询到二维码的状态已经发生变化，会将 PC 端的二维码更新为已扫描，请确认。
+
+**3、已确认**
+
+流程图中的 第 11 ~ 15 步骤，这是扫码登录的最后阶段，移动端携带上一步骤中获取的临时 token ，确认登录，**服务端校对完成后，会更新二维码状态，并且给 PC 端生成一个正式的 token ，后续 PC 端就是持有这个 token 访问服务端**。
+
+PC 端的定时器，轮询到了二维码状态为登录状态，并且会获取到了生成的 token ，完成登录，后续访问都基于 token 完成。
+
+在服务器端会跟手机端一样，维护着 token 跟二维码、PC 设备信息、账号等信息。
+
+到此，二维码扫描登录原理就差不多了，二维码扫描登录在原理上不难理解，跟 OAuth2.0 有一丝的相似之处，但是实现起来可能就比较复杂。
+
+-----
+
+#### 10. 页面资源预加载
+
+**参考答案**：
+
+preload 提供了一种声明式的命令，让浏览器提前加载指定资源(加载后并不执行)，在需要执行的时候再执行。提供的好处主要是
+
+- 将加载和执行分离开，可不阻塞渲染和 document 的 onload 事件
+- 提前加载指定资源，不再出现依赖的font字体隔了一段时间才刷出
+
+**如何使用 preload**
+
+使用 link 标签创建
+
+```html
+<!-- 使用 link 标签静态标记需要预加载的资源 -->
+<link rel="preload" href="/path/to/style.css" as="style">
+
+<!-- 或使用脚本动态创建一个 link 标签后插入到 head 头部 -->
+<script>
+const link = document.createElement('link');
+link.rel = 'preload';
+link.as = 'style';
+link.href = '/path/to/style.css';
+document.head.appendChild(link);
+</script>
+
+```
+
+使用 HTTP 响应头的 Link 字段创建
+
+```js
+Link: <https://example.com/other/styles.css>; rel=preload; as=style
+```
+
+如我们常用到的 antd 会依赖一个 CDN 上的 font.js 字体文件，我们可以设置为提前加载，以及有一些模块虽然是按需异步加载，但在某些场景下知道其必定会加载的，则可以设置 preload 进行预加载，如：
+
+```html
+<link rel="preload" as="font"   href="https://at.alicdn.com/t/font_zck90zmlh7hf47vi.woff">
+<link rel="preload" as="script" href="https://a.xxx.com/xxx/PcCommon.js">
+<link rel="preload" as="script" href="https://a.xxx.com/xxx/TabsPc.js">
+```
+
+------
+
+#### 11. 前端切换中英文
+
+**参考答案**：
+
+**方法1：（中英文各做一份，然后用不同的文件夹区分开来，点击切换语言时，链接跳转到不同文件夹就行了）**
+
+**优点：**各自的版本是分离开来的，比较稳定，不会出现互相干扰（共用数据库资料的除外）
+
+**缺点：**修改一个样式或功能，要把变更的操作（代码逻辑、更换图片、修改样式等）在所有的语言版 本上重复一次，加重了工作量
+
+**场景：**个人认为符合下面2种场景可以考虑使用这种方法
+
+**注： **如果切换的语言版本很少，并且本身网站不复杂（比如电商网站不推荐）
+
+整体内容相对固定，布局比较简洁，扁平化，改动不会太频繁的（比如新闻类网站不推荐）
+
+**方法2：借助 jquery 插件**——jquery.i18n.properties
+
+**方法3：使用微软字典整站翻译**
+
+-----
+
+#### 12. 贪吃蛇是怎么完成碰撞触发的
+
+**参考答案**：
+
+**实现碰撞:**
+
+1. 蛇头撞到墙,需要判断蛇头的坐标是否和墙的坐标重合
+2. 撞到自己的身体，需要判断蛇头的坐标和蛇的某一节坐标是否重合。
+
+所以在蛇移动之后我们用蛇头的坐标去遍历蛇自己的所有坐标并且判断蛇的X或者Y是否大于或者小于地图边界了，这样就能知道是否发生碰撞，发生碰撞之后直接break不在刷新视图就好。
+
+**贪吃蛇实现思路：**
+
+1. 需要一张地图，中间是空的四周有墙体。
+2. 需要一条蛇，这条蛇由蛇头和蛇身组成。
+3. 需要食物，并且在蛇吃掉食物之后将蛇的身体变长，而且重新生成一个食物。
+4. 蛇需要移动，这应该是最难实现的。
+5. 蛇撞到墙或者撞到自己的身体就会死亡。
+6. 需要能用键盘控制蛇的运动方向，这个会和蛇的移动有一些联系。
+
+------
+
+#### 13.compositionStart，compositionEnd处理中文输入
+
+**参考答案**：
+
+**问题**：
+
+在 Web 开发中，经常要对表单元素的输入进行限制，比如说不允许输入特殊字符，标点。通常我们会监听 input 事件:
+
+```js
+inputElement.addEventListener('input', function(event) {
+  let regex = /[^1-9a-zA-Z]/g;
+  event.target.value = event.target.value.replace(regex, '');
+  event.returnValue = false
+});
+```
+
+这段代码在 Android 上是没有问题的，但是在 iOS 中，input 事件会截断非直接输入，什么是非直接输入呢，在我们输入汉字的时候，比如说「喜茶」，中间过程中会输入拼音，每次输入一个字母都会触发 input 事件，**然而在没有点选候选字或者点击「选定」按钮前，都属于非直接输入。**
+
+**解决：**
+
+这显然不是我们想要的结果，**我们希望在直接输入之后才触发 input 事件**，这就需要引出我要说的两个事件——compositionstart和compositionend。
+
+compositionstart事件在用户开始进行非直接输入的时候触发，而在非直接输入结束，也即用户点选候选词或者点击「选定」按钮之后，会触发compositionend事件。
+
+```html
+<body>
+  <input type="text" id="userName" name="">
+  <script type="text/javascript">
+    var inputElement=document.getElementById("userName");
+    var inputLock=false;
+    function replaceStr(inputElement){
+      let reg=/[^1-9a-zA-Z]/g;
+      inputElement.value=inputElement.value.replace(reg,"");
+    }
+    inputElement.addEventListener("compositionstart",function(){
+      inputLock=true;
+    });
+    inputElement.addEventListener("compositionend",function(event){
+      inputLock=false;
+      replaceStr(event.target);
+    });
+    inputElement.addEventListener("input",function(event){
+      if (!inputLock) {
+        replaceStr(event.target);
+        event.returnValue=false;
+      }
+    });
+  </script>
+```
+
+添加一个 inputLock 变量，当用户未完成直接输入前，inputLock 为 true，不触发 input 事件中的逻辑，当用户完成有效输入之后，inputLock 设置为 false，触发 input 事件的逻辑。这里需要注意的一点是，compositionend 事件是在 input 事件后触发的，所以在 compositionend事件触发时，也要调用 input 事件处理逻辑
+
+-------
+
+#### 14. 1000 万 个ip，如何做到O(1) 查找
+
+**参考答案**：
+
+用bitmap来做这个问题。首先对数据进行预处理。定义1000 万bit位个int.在32位计算机下，一个int是32位，1000 万位的话，就需要1000 万除以32个int整数。大概有很多个。第一个int标记0-31这个数字范围的ip存不存在，比如说0000001这个ip，我就把第一个int的第1位置1。第二个int能够标记32-63这个范围的ip存不存在，以此类推。把这1000 万个ip号预处理一遍。然后计算你给我的这个ip，它是在哪个int里面，然后找到相应的数据位，看是1还是0，就能在O(1)的时间里找到
+
+------
+
+#### 15. 如何实现 pwa
+
+**参考答案**：
+
+实现：
+
+准备工作：建议安装 [http-server]和 [ngrok]以便调试和查看。
+
+准备一个 HTML 文件, 以及相应的 CSS 等:
+
+```html
+<head>
+  <title>Minimal PWA</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+  <h3>Revision 1</h3>
+  <div class="main-text">Minimal PWA, open Console for more~~~</div>
+</body>
+
+```
+
+添加 manifest.json 文件
+
+为了让 PWA 应用被添加到主屏幕, 使用 manifest.json 定义应用的名称, 图标等等信息。
+
+```json
+{
+  "name": "Minimal app to try PWA",
+  "short_name": "Minimal PWA",
+  "display": "standalone",
+  "start_url": "/",
+  "theme_color": "#8888ff",
+  "background_color": "#aaaaff",
+  "icons": [
+    {
+      "src": "e.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }
+  ]
+}
+
+```
+
+然后在 HTML 文件当中引入配置:
+
+```html
+<link rel="manifest" href="manifest.json" />
+
+```
+
+添加 Service Worker
+
+Service Worker 在网页已经关闭的情况下还可以运行, 用来实现页面的缓存和离线, 后台通知等等功能。sw.js 文件需要在 HTML 当中引入:
+
+```html
+<script>
+  if (navigator.serviceWorker != null) {
+    navigator.serviceWorker.register('sw.js')
+    .then(function(registration) {
+      console.log('Registered events at scope: ', registration.scope);
+    });
+  }
+</script>
+
+```
+
+后面我们会往 sw.js 文件当中添加逻辑代码。在 Service Worker 当中会用到一些全局变量:
+
+- self: 表示 Service Worker 作用域, 也是全局变量
+- caches: 表示缓存
+- skipWaiting: 表示强制当前处在 waiting 状态的脚本进入 activate 状态
+- clients: 表示 Service Worker 接管的页面
+
+处理静态缓存
+
+首先定义需要缓存的路径, 以及需要缓存的静态文件的列表, 这个列表也可以通过 Webpack 插件生成。
+
+```js
+var cacheStorageKey = 'minimal-pwa-1'
+
+var cacheList = [
+  '/',
+  "index.html",
+  "main.css",
+  "e.png"
+]
+
+```
+
+借助 Service Worker, 可以在注册完成安装 Service Worker 时, 抓取资源写入缓存:
+
+```js
+self.addEventListener('install', e => {
+  e.waitUntil(
+    caches.open(cacheStorageKey)
+    .then(cache => cache.addAll(cacheList))
+    .then(() => self.skipWaiting())
+  )
+})
+
+```
+
+调用 self.skipWaiting() 方法是为了在页面更新的过程当中, 新的 Service Worker 脚本能立即激活和生效。
+
+处理动态缓存
+
+网页抓取资源的过程中, 在 Service Worker 可以捕获到 fetch 事件, 可以编写代码决定如何响应资源的请求:
+
+```js
+self.addEventListener('fetch', function(e) {
+  e.respondWith(
+    caches.match(e.request).then(function(response) {
+      if (response != null) {
+        return response
+      }
+      return fetch(e.request.url)
+    })
+  )
+})
+
+```
+
+真实的项目当中, 可以根据资源的类型, 站点的特点, 可以专门设计复杂的策略。fetch 事件当中甚至可以手动生成 Response 返回给页面。
+
+更新静态资源
+
+缓存的资源随着版本的更新会过期, 所以会根据缓存的字符串名称(这里变量为 cacheStorageKey, 值用了 "minimal-pwa-1")清除旧缓存, 可以遍历所有的缓存名称逐一判断决决定是否清除(备注: 简化的写法, Promise.all 中 return undefined 可能出错, 见评论):
+
+```js
+self.addEventListener('activate', function(e) {
+  e.waitUntil(
+    Promise.all(
+      caches.keys().then(cacheNames => {
+        return cacheNames.map(name => {
+          if (name !== cacheStorageKey) {
+            return caches.delete(name)
+          }
+        })
+      })
+    ).then(() => {
+      return self.clients.claim()
+    })
+  )
+})
+
+```
+
+在新安装的 Service Worker 中通过调用 self.clients.claim() 取得页面的控制权, 这样之后打开页面都会使用版本更新的缓存。旧的 Service Worker 脚本不再控制着页面之后会被停止。
+
+**扩展**：
+
+概念：
+
+Google 提出 PWA 的时候，并没有给它一个准确的定义，经过我们的实践和总结， PWA 它不是特指某一项技术，而是应用多项技术来改善用户体验的 Web App，其核心技术包括 Web App Manifest，Service Worker，Web Push 等，用户体验才是 PWA 的核心。
+
+PWA 主要特点如下：
+
+- 可靠 - 即使在网络不稳定甚至断网的环境下，也能瞬间加载并展现
+- 用户体验 - 快速响应，具有平滑的过渡动画及用户操作的反馈
+- 用户黏性 - 和 Native App 一样，可以被添加到桌面，能接受离线通知，具有沉浸式的用户体验
+
+PWA的特性：
+
+- **渐进式** - 适用于所有浏览器，因为它是以渐进式增强作为宗旨开发的
+- **连接无关性** - 能够借助 Service Worker 在离线或者网络较差的情况下正常访问
+- **类原生应用** - 由于是在 App Shell 模型基础上开发，因此应具有 Native App 的交互，给用户 Native App 的体验
+- **持续更新** - 始终是最新的，无版本和更新问题
+- **安全** - 通过 HTTPS 协议提供服务，防止窥探，确保内容不被篡改
+- **可索引** - manifest 文件和 Service Worker 可以让搜索引擎索引到，从而将其识别为『应用』
+- **黏性** - 通过推送离线通知等，可以让用户回流
+- **可安装** - 用户可以添加常用的 Web App 到桌面，免去到应用商店下载的麻烦
+- **可链接** - 通过链接即可分享内容，无需下载安装
+
+------
+
+#### 16. 用户体验优化
+
+**参考答案**：
+
+- **页面整体颜值和结构如何给用户好的印象？**
+
+> 用户第一眼看颜色，切记不是颜色越多越好看，而是要注意整体色调应该一致；不同页面相同功能操作方式应统一；图标使用统一，还有就是一个页面不能放太多的信息和模块太过密集，这样用户会反感，并且关键信息用户也发现不了。
+
+- **对于checkbox选择多，全选按钮真的够用吗？**
+
+> 当需要选多条数据时,用户一般比较反感一条一条的选,当然全选功能能有所缓解,其实你可以再加一点亮点在里面,如双击选同类型或者其他什么属性的,这个具体可以看用户的侧重点,再具体去优化。
+
+- **一个维护数据的页面，增、删、改数据后应该怎做？**
+
+> 这个大部分人应该都知道在操作过后默认加一个再查询的事件；当然这个你必须同项目经理或者用户讨论，毕竟这样做不是用户主观意愿去刷新页面的。
+
+- **需要频繁操作，而且要多步骤的优化？**
+
+> 比喻你需要看一条数据的详情正常操作可能是选一条数据，再点击详情按钮；其实这样的操作我们可以进行快捷按键操作，例如我们可以双击这条数据，然后立刻勾选此数据（并清除本条外的其他勾选），并展示详情，这对用户就是亮点哦。
+
+- **数据多而且复杂时，怎样才能让用户用起来欢乐？**
+
+> 对于数据多而复杂时，多条件组合输入查询是必须要的，当页面不能牺牲太多地方放多条件查询时，我们可以将少用的那些条件合并进行下拉选择你需要使用的条件；还有就是当填了好几个输入框时，想重新填写条件时，我们应该有一个clear按钮来清掉所有查询输入框的值；最后用户可能会有按其中一个字段进行排序的需求，可以通过点击title去实现。
+
+- **查询失败时，你是怎么向用户发通知的？**
+
+> 在查询数据时，如果没有任何反应，情况会有很多种，为了增加辨识度，我们应该在get查询时采用**异步**方式，当数据没有完全渲染之前，用一张gif图片loading显示在页面，让用户知道正在查询；当查询数据为空的，返回数据可能在msg中告诉了你，可能也没有，我建议在前端判断，当数据数组长度为0时，告诉用户没有查询到数据。
+
+- **部分页面不同用户需要注重的字段不同？**
+
+> 我遇到过此类问题，由于共用字段多，不能兼顾显示多者关注的字段，所以我选择了让用户自己做决定显示什么字段；我让用户自己选择显示什么字段，怎么排序，宽度多少等都让用户解决，此处注意，最好在用户编辑的时候，让他看到及时的效果。
+
+- **当用户提出的优化需要牺牲性能时，怎么处理？**
+
+> 如果用户针对一些极少出现情况而需要牺牲性能来优化时，可以自行斟酌拒绝，因为这样没有考虑到其他大多数使用情况，这就是浪费；如果是常用的功能应该去实现，这个要具体问题具体对待。
+
+- **当有很多输入框需要用户输入时，我们能做什么？**
+
+> 我们针对有固定关联的一些字段可以实现自动填写或者自动生成一部分，尽量让用户少动手，因为用户就是‘懒’，你能让用户可以懒起来用你的产品，那么 你就赢了。
+
+- **当用户新增数据有特殊需要时，例如：批量、同类型新增？**
+
+> 批量新增时，可以通过前台上传文件，让后台去处理；当需要在前台批量新增时，我们应该先了解到批量肯定是要流水的，怎么流水就要看用户需求了，大部分肯定是让关键字段批量生成流水号，然后按要求数量进行新增，这里关键字段肯定后缀需要数字结尾，然后在输入框后面留一个小输入框来输入批量的数量；
+> 如果是同类型新增，我们可以使用勾选一个同类型，进行复制新增，然后让用户自行在复制的数据上进行部分修改，免去了大部分相同的输入。
+
+- **在一些子任务新增时，相同的字段都填一样的，怎么让用户欢乐操作？**
+
+> 当有一个大任务下，要新增多个小任务时，而且是一行一条的这种最明显，第一种比喻操作日期都是今天，我可以只填写第一个，然后在当前输入框一个回车或者双击，让下面相同的字段都写入相同的字段内容；如果从上至下都不同时，用户数据如果在excel中时，可以通过复制->粘贴->回车,直接将多条数据规整的填入多个输入框。
+
+------
+
+#### 17. 数据展示优化
+
+**参考答案**：
+
+优化方案：
+
+1. 减少 HTTP 请求
+2. 使用 HTTP2：解析速度快、多路复用、首部压缩、优先级高、可以对不同的流的流量进行精确控制、服务器可以对一个客户端请求发送多个响应
+3. 使用服务端渲染：首屏渲染快，SEO 好
+4. 静态资源使用 CDN：在多个位置部署服务器，让用户离服务器更近，从而缩短请求时间
+5. 将 CSS 放在文件头部，JavaScript 文件放在底部：所有放在 head 标签里的 CSS 和 JS 文件都会堵塞渲染。如果这些 CSS 和 JS 需要加载和解析很久的话，那么页面就空白了。所以 JS 文件要放在底部，等 HTML 解析完了再加载 JS 文件
+6. 使用字体图标 iconfont 代替图片图标：不会失真，生成的文件特别小。
+7. 善用缓存，不重复加载相同的资源：为了避免用户每次访问网站都得请求文件，我们可以通过添加 Expires 或 max-age 来控制这一行为。Expires 设置了一个时间，只要在这个时间之前，浏览器都不会请求文件，而是直接使用缓存。**而 max-age 是一个相对时间，建议使用 max-age 代替 Expires 。**
+8. 压缩文件：压缩文件可以减少文件下载时间
+9. 图片优化：
+   1. 图片延迟加载
+   2. 响应式图片
+   3. 调整图片大小
+   4. 降低图片质量
+   5. 尽可能利用 CSS3 效果代替图片
+   6. 使用 webp 格式的图片
+10. 通过 webpack 按需加载代码，提取第三库代码，减少 ES6 转为 ES5 的冗余代码
+11. 减少重绘重排
+
+-----
+
+#### 18.静态代码扫描，如何设计
+
+**参考答案**：
+
+**静态代码扫描存在的价值**
+
+1. 研发过程，发现BUG越晚，修复的成本越大
+2. 缺陷引入的大部分是在编码阶段，但发现的更多是在单元测试、集成测试、功能测试阶段
+3. 统计证明，在整个软件开发生命周期中，30% 至 70% 的代码逻辑设计和编码缺陷是可以通过静态代码分析来发现和修复的
+
+以上三点证明了，静态代码扫描在整个安全开发的流程中起着十分关键的作用，且实施这件事情的时间点需要尽量前移，因为扫描的节点左移能够大幅度的降低开发以及修复的成本，能够帮助开发人减轻开发和修复的负担，许多公司在推行静态代码扫描工具的时候会遇到**大幅度的阻力**，这方面阻力主要来自于开发人员，由于工具能力的有限性，会产生大量的误报，这就导致了开发人员很可能在做BUG确认的工作时花费了大量的无用时间。因此选择一款合适的静态代码分析工具变得尤为重要，合适的工具能够真正达到降低开发成本的效果。
+
+**静态代码分析理论基础和主要技术**
+
+静态代码分析原理分为两种：分析源代码编译后的中间文件（如Java的字节码）；分析源文件。主要分析技术如下：
+
+- 缺陷模式匹配
+  事先从代码分析经验中收集足够多的共性缺陷模式，将待分析代码与已有的共性缺陷模式进行匹配，从而完成软件安全分析。优点：简单方便；缺点：需要内置足够多的缺陷模式，容易产生误报。
+- 类型推断
+  类型推断技术是指通过对代码中运算对象类型进行推理，从而保证代码中每条语句都针对正确的类型执行。
+- 模型检查
+  建立于有限状态自动机的概念基础上。将每条语句产生的影响抽象为有限状态自动机的一个状态，再通过分析有限状态机达到分析代码目的。校验程序并发等时序特性。
+- 数据流分析
+  从程序代码中收集程序语义信息，抽象成控制流图，可以通过控制流图，不必真实的运行程序，可以分析发现程序运行时的行为。
+
+#### 19. 我们现在需要写一个 foo 函数，这个函数返回首次调用时的 Date 对象，注意是首次。
+
+**参考答案**：
+
+**解决一：普通方法**
+
+```js
+var t;
+function foo() {
+    if (t) return t;
+    t = new Date()
+    return t;
+}
+
+console.log(foo());
+setTimeout(()=>{
+    console.log(foo());
+},2000);
+
+```
+
+问题有两个，一是污染了全局变量，二是每次调用 foo 的时候都需要进行一次判断。
+
+**解决二：闭包**
+
+我们很容易想到用闭包避免污染全局变量。
+
+```js
+var foo = (function() {
+    var t;
+    return function() {
+        if (t) return t;
+        t = new Date();
+        return t;
+    }
+})();
+```
+
+然而还是没有解决调用时都必须进行一次判断的问题。
+
+**解决三：函数对象**
+
+函数也是一种对象，利用这个特性，我们也可以解决这个问题。
+
+```js
+function foo() {
+    if (foo.t) return foo.t;
+    foo.t = new Date();
+    return foo.t;
+}
+
+```
+
+依旧没有解决调用时都必须进行一次判断的问题。
+
+**解决四：惰性函数**
+
+不错，惰性函数就是解决每次都要进行判断的这个问题，解决原理很简单，重写函数。
+
+```js
+var foo=function(){
+    var t=new Date();
+    foo=function(){
+        return t;
+    };
+    return foo();
+}
+
+console.log(foo());
+setTimeout(()=>{
+    console.log(foo());
+},2000);
+
+```
+
+----
+
+#### 20. 解析 URL Params 为对象
+
+**参考答案**：
+
+**题目**：
+
+```js
+let url = 'http://www.domain.com/?user=anonymous&id=123&id=456&city=%E5%8C%97%E4%BA%AC&enabled';
+parseParam(url)
+/* 结果
+{ user: 'anonymous',
+  id: [ 123, 456 ], // 重复出现的 key 要组装成数组，能被转成数字的就转成数字类型
+  city: '北京', // 中文需解码
+  enabled: true, // 未指定值得 key 约定为 true
+}
+*/
+
+```
+
+**答案**：
+
+```js
+function parseParam(url) {
+  const paramsStr = /.+\?(.+)$/.exec(url)[1]; // 将 ? 后面的字符串取出来
+  const paramsArr = paramsStr.split('&'); // 将字符串以 & 分割后存到数组中
+  let paramsObj = {};
+  // 将 params 存到对象中
+  paramsArr.forEach(param => {
+    if (/=/.test(param)) { // 处理有 value 的参数
+      let [key, val] = param.split('='); // 分割 key 和 value
+      val = decodeURIComponent(val); // 解码
+      val = /^\d+$/.test(val) ? parseFloat(val) : val; // 判断是否转为数字
+
+      if (paramsObj.hasOwnProperty(key)) { // 如果对象有 key，则添加一个值
+        paramsObj[key] = [].concat(paramsObj[key], val);
+      } else { // 如果对象没有这个 key，创建 key 并设置值
+        paramsObj[key] = val;
+      }
+    } else { // 处理没有 value 的参数
+      paramsObj[param] = true;
+    }
+  })
+
+  return paramsObj;
+}
+
+```
+
+----
+
+#### 21. 数据结构处理
+
+**参考答案**：
+
+**题目**：
+
+有一个祖先树状 json 对象，当一个人有一个儿子的时候，其 child 为其儿子对象，如果有多个儿子，child 为儿子对象的数组。
+
+请实现一个函数，找出这个家族中所有有多个儿子的人的名字（name），输出一个数组。
+
+```js
+// 样例数据
+let data = {
+  name: 'jack',
+  child: [
+    { name: 'jack1' },
+    {
+      name: 'jack2',
+      child: [{
+        name: 'jack2-1',
+        child: { name: 'jack2-1-1' }
+      }, {
+        name: 'jack2-2'
+      }]
+    },
+    {
+      name: 'jack3',
+      child: { name: 'jack3-1' }
+    }
+  ]
+}
+
+```
+
+**答案**：
+
+- 用递归
+
+  ```js
+  function findMultiChildPerson(data) {
+    let nameList = [];
+  
+    function tmp(data) {
+      if (data.hasOwnProperty('child')) {
+        if (Array.isArray(data.child)) {
+          nameList.push(data.name);
+          data.child.forEach(child => tmp(child));
+        } else {
+          tmp(data.child);
+        }
+      }
+    }
+    tmp(data);
+    return nameList;
+  }
+  
+  ```
+
+  
+
+- 迭代
+
+  ```js
+  function findMultiChildPerson(data) {
+    let list = [data];
+    let nameList = [];
+  
+    while (list.length > 0) {
+      const obj = list.shift();
+      if (obj.hasOwnProperty('child')) {
+        if (Array.isArray(obj.child)) {
+          nameList.push(obj.name);
+          list = list.concat(obj.child);
+        } else {
+          list.push(obj.child);
+        }
+      }
+    }
+    return nameList;
+  }
+  
+  ```
+
+  
+
+---
 
