--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10329,6 +10329,44 @@ var binaryGap = function(n) {
 
 ```
 
+## 905. 按奇偶排序数组
+
+给你一个整数数组 nums，将 nums 中的的所有偶数元素移动到数组的前面，后跟所有奇数元素。
+
+返回满足此条件的 任一数组 作为答案。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var sortArrayByParity = function(nums) {
+    let temp;
+    for (let i=0,j=nums.length-1;i<j;){
+        if (isEven(nums[i])) {  //左边位是偶数，不动
+            i++;
+        }else{
+            //左边位是奇数，与右边的偶数换位置
+            if(isEven(nums[j])){
+                temp=nums[i];
+                nums[i]=nums[j];
+                nums[j]=temp;
+            }else{
+                j--;
+            }
+        }
+    }
+    return nums;
+};
+var isEven=function(num){
+    return num%2===0;
+}
+
+let test=[3,1,2,4]
+let result=sortArrayByParity(test);
+console.log(result);
+```
+
 
 
 ## 913. 猫和老鼠
