--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7888,6 +7888,74 @@ const isDigit = (ch) => {
 
 ```
 
+## 427. 建立四叉树
+
+给你一个 n * n 矩阵 grid ，矩阵由若干 0 和 1 组成。请你用四叉树表示该矩阵 grid 。
+
+你需要返回能表示矩阵的 四叉树 的根结点。
+
+注意，当 isLeaf 为 False 时，你可以把 True 或者 False 赋值给节点，两种值都会被判题机制 接受 。
+
+四叉树数据结构中，每个内部节点只有四个子节点。此外，每个节点都有两个属性：
+
+val：储存叶子结点所代表的区域的值。1 对应 True，0 对应 False；
+isLeaf: 当这个节点是一个叶子结点时为 True，如果它有 4 个子节点则为 False 。
+
+```
+/**
+ * // Definition for a QuadTree node.
+ * function Node(val,isLeaf,topLeft,topRight,bottomLeft,bottomRight) {
+ *    this.val = val;
+ *    this.isLeaf = isLeaf;
+ *    this.topLeft = topLeft;
+ *    this.topRight = topRight;
+ *    this.bottomLeft = bottomLeft;
+ *    this.bottomRight = bottomRight;
+ * };
+ */
+ 
+/**
+ * @param {number[][]} grid
+ * @return {Node}
+ */
+var construct = function(grid) {
+    return dfs(grid,0,0,grid.length,grid.length);
+};
+
+const dfs=(grid,r0,c0,r1,c1)=>{
+    let same=true;
+    for(let i=r0;i<r1;++i){
+        for(let j=c0;j<c1;++j){
+            if (grid[i][j]!==grid[r0][c0]) {
+                same=false;
+                break;
+            }
+        }
+        if(!same){
+            break;
+        }
+    }
+    if (same) {
+        return new Node(grid[r0][c0]===1,true);
+    }
+    const ret=new Node(
+        true,
+        false,
+        dfs(grid, r0, c0, Math.floor((r0 + r1) / 2), Math.floor((c0 + c1) / 2)),
+        dfs(grid, r0, Math.floor((c0 + c1) / 2), Math.floor((r0 + r1) / 2), c1),
+        dfs(grid, Math.floor((r0 + r1) / 2), c0, r1, Math.floor((c0 + c1) / 2)),
+        dfs(grid, Math.floor((r0 + r1) / 2), Math.floor((c0 + c1) / 2), r1, c1)
+    );
+    return ret;
+}
+
+let grid = [[0,1],[1,0]];
+let result=construct(grid);
+console.log(result);
+```
+
+
+
 ## 429.N 叉树的层序遍历
 
 给定一个 N 叉树，返回其节点值的层序遍历。（即从左到右，逐层遍历）。
@@ -10364,6 +10432,47 @@ var isEven=function(num){
 
 let test=[3,1,2,4]
 let result=sortArrayByParity(test);
+console.log(result);
+```
+
+## 908. 最小差值 I
+
+给你一个整数数组 nums，和一个整数 k 。
+
+在一个操作中，您可以选择 0 <= i < nums.length 的任何索引 i 。将 nums[i] 改为 nums[i] + x ，其中 x 是一个范围为 [-k, k] 的整数。对于每个索引 i ，最多 只能 应用 一次 此操作。
+
+nums 的 分数 是 nums 中最大和最小元素的差值。 
+
+在对  nums 中的每个索引最多应用一次上述操作后，返回 nums 的最低 分数 。
+
+提示：
+
+1 <= nums.length <= 104
+0 <= nums[i] <= 104
+0 <= k <= 104
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var smallestRangeI = function(nums, k) {
+    let maxValue=nums[0];
+    let minValue=nums[0];
+    for (let i=1;i<nums.length;i++){
+        maxValue=Math.max(maxValue,nums[i]);
+        minValue=Math.min(minValue,nums[i]);
+    }
+    if (maxValue-minValue-2*k<=0) {
+        return 0;
+    }else{
+        return maxValue-minValue-2*k;
+    }
+};
+
+let nums = [1,3,6], k = 3;
+let result=smallestRangeI(nums,k);
 console.log(result);
 ```
 
