--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11450,6 +11450,59 @@ let result=getMaximumGold(test);
 console.log(result);
 ```
 
+## 1305. 两棵二叉搜索树中的所有元素
+
+给你 root1 和 root2 这两棵二叉搜索树。请你返回一个列表，其中包含 两棵树 中的所有整数并按 升序 排序。
+提示：
+
+每棵树的节点数在 [0, 5000] 范围内
+-105 <= Node.val <= 105
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root1
+ * @param {TreeNode} root2
+ * @return {number[]}
+ */
+var getAllElements = function(root1, root2) {
+    let value1=[];
+    let value2=[]
+    //中序遍历
+    const inorder=(root,ret)=>{
+        if (root) {
+            inorder(root.left,ret);
+            ret.push(root.val);
+            inorder(root.right,ret);
+        }
+    };
+
+    inorder(root1,value1);
+    inorder(root2,value2);
+
+    let ans=[];
+    while(value1.length>0 && value2.length>0){
+        if (value1[0]<value2[0]) {
+            ans.push(value1.shift());
+        }else{
+            ans.push(value2.shift());
+        }
+    }
+    ans=ans.concat(value1).concat(value2);
+    return ans;
+};
+
+```
+
+
+
 ## 1380. 矩阵中的幸运数
 
 给你一个 m * n 的矩阵，矩阵中的数字 各不相同 。请你按 任意 顺序返回矩阵中的所有幸运数。
