--- a/学习记录.md
+++ b/学习记录.md
@@ -514,7 +514,7 @@ css属性，js属性
 
 2022.04.30
 
-力扣: 建立四叉树
+力扣: 建立四叉树，最小差值
 
 
 
@@ -522,3 +522,6 @@ css属性，js属性
 
 ## 2022五月
 
+2022.05.01
+
+力扣: 两棵二叉搜索树中的所有元素
