--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10724,6 +10724,104 @@ console.log(result);
 
 ```
 
+## 937. 重新排列日志文件
+
+给你一个日志数组 logs。每条日志都是以空格分隔的字串，其第一个字为字母与数字混合的 标识符 。
+
+有两种不同类型的日志：
+
+字母日志：除标识符之外，所有字均由小写字母组成
+数字日志：除标识符之外，所有字均由数字组成
+请按下述规则将日志重新排序：
+
+所有 字母日志 都排在 数字日志 之前。
+字母日志 在内容不同时，忽略标识符后，按内容字母顺序排序；在内容相同时，按标识符排序。
+数字日志 应该保留原来的相对顺序。
+返回日志的最终顺序。
+
+ 
+
+提示：
+
+1 <= logs.length <= 100
+3 <= logs[i].length <= 100
+logs[i] 中，字与字之间都用 单个 空格分隔
+题目数据保证 logs[i] 都有一个标识符，并且在标识符之后至少存在一个字
+
+```js
+/**
+ * @param {string[]} logs
+ * @return {string[]}
+ */
+var reorderLogFiles = function(logs) {
+    let n=logs.length;
+    const arr=new Array(n).fill(0);
+    for (let i=0;i<n;i++){
+        arr[i]=[logs[i],i];
+    }
+    arr.sort((a,b)=>logCompare(a,b));
+    const ans=new Array(n).fill(0);
+    for (let i=0;i<n;i++){
+        ans[i]=arr[i][0];
+    }
+    return ans;
+};
+
+const logCompare=(log1,log2)=>{
+    let split1=split(log1[0]," ");
+    let split2=split(log2[0]," ");
+    let isDigit1=isDigit(split1[1][0]);
+    let isDigit2=isDigit(split2[1][0]);
+    if (isDigit1 && isDigit2) {
+        return log1[1]-log2[1];
+    }
+    if (!isDigit1 && !isDigit2) {
+        let sc=compareTo(split1[1],split2[1]);
+        if (sc!==0) {
+            return sc;
+        }
+        return compareTo(split1[0],split2[0]);
+    }
+    return isDigit1 ? 1 : -1;
+};
+
+const isDigit=(ch)=>{
+    return parseFloat(ch).toString()==="NaN" ? false : true;
+};
+
+const compareTo=(left,right)=>{
+    for (let i=0;i<Math.min(left.length,right.length);i++){
+        if (left[i].charCodeAt()<right[i].charCodeAt()) {
+            return -1;
+        }
+        if (left[i].charCodeAt()>right[i].charCodeAt()) {
+            return 1;
+        }
+    }
+    if (left.length===right.length) {
+        return 0;
+    }
+    if (left.length>right.length) {
+        return 1;
+    }
+    return -1;
+};
+
+const split=(str,separator)=>{
+    let firstItem=str.split(separator)[0];
+    let ret=[firstItem];
+    let index=str.indexOf(separator);
+    ret.push(str.slice(index+1,str.length));
+    return ret;
+}
+
+let logs = ["dig1 8 1 5 1","let1 art can","dig2 3 6","let2 own kit dig","let3 art zero"];
+let result=reorderLogFiles(logs);
+console.log(result);
+```
+
+
+
 ## 954. 二倍数对数组
 
 给定一个长度为偶数的整数数组 arr，只有对 arr 进行重组后可以满足 “对于每个 0 <= i < len(arr) / 2，都有 arr[2 * i + 1] = 2 * arr[2 * i]” 时，返回 true；否则，返回 false。
@@ -12443,6 +12541,78 @@ let test=[[1,2],[2,3],[4,2]];
 let result=findCenter(test);
 console.log(result);
 
+```
+
+## 1823. 找出游戏的获胜者
+
+共有 n 名小伙伴一起做游戏。小伙伴们围成一圈，按 顺时针顺序 从 1 到 n 编号。确切地说，从第 i 名小伙伴顺时针移动一位会到达第 (i+1) 名小伙伴的位置，其中 1 <= i < n ，从第 n 名小伙伴顺时针移动一位会回到第 1 名小伙伴的位置。
+
+游戏遵循如下规则：
+
+从第 1 名小伙伴所在位置 开始 。
+沿着顺时针方向数 k 名小伙伴，计数时需要 包含 起始时的那位小伙伴。逐个绕圈进行计数，一些小伙伴可能会被数过不止一次。
+你数到的最后一名小伙伴需要离开圈子，并视作输掉游戏。
+如果圈子中仍然有不止一名小伙伴，从刚刚输掉的小伙伴的 顺时针下一位 小伙伴 开始，回到步骤 2 继续执行。
+否则，圈子中最后一名小伙伴赢得游戏。
+给你参与游戏的小伙伴总数 n ，和一个整数 k ，返回游戏的获胜者。
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var findTheWinner = function(n, k) {
+    let arr=new Array(n).fill(0);
+    for (let i=0;i<n;i++){
+        arr[i]=i+1;
+    }
+    while(arr.length>1){
+        for (let i=1;i<k;i++){
+            arr.push(arr.shift());
+        }
+        arr.shift();
+    }
+    return arr[0];
+};
+
+let n = 6, k = 5;
+let result=findTheWinner(n,k);
+console.log(result);
+```
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var findTheWinner = function(n, k) {
+    let arr=new Array(n).fill(0);
+    for (let i=0;i<n;i++){
+        arr[i]=i+1;
+    }
+    let k1;
+    while(arr.length>1){
+        k1=k;
+        if (k>arr.length) {
+            k1=k%arr.length;
+            if (k1===0) {
+                k1=arr.length;
+            }
+        }
+
+        for (let i=1;i<k1;i++){
+            arr.push(arr.shift());
+        }
+        arr.shift();
+    }
+    return arr[0];
+};
+
+let n = 6, k = 5;
+let result=findTheWinner(n,k);
+console.log(result);
 ```
 
 
