--- a/学习记录.md
+++ b/学习记录.md
@@ -526,8 +526,18 @@ css属性，js属性
 
 力扣: 两棵二叉搜索树中的所有元素
 
-2022.05.05
+2022.05.02
 
 力扣:标签验证器
 
 node.js 
+
+2022.05.03
+
+力扣:重新排列日志文件
+
+node.js 
+
+2022.05.04
+
+力扣: 找出游戏的获胜者
