--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9419,6 +9419,82 @@ var hasAlternatingBits = function(n) {
 };
 ```
 
+## 713. 乘积小于 K 的子数组
+
+给你一个整数数组 nums 和一个整数 k ，请你返回子数组内所有元素的乘积严格小于 k 的连续子数组的数目。
+提示: 
+
+1 <= nums.length <= 3 * 104
+1 <= nums[i] <= 1000
+0 <= k <= 106
+
+使用子数组
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var numSubarrayProductLessThanK = function(nums, k) {
+    let n=nums.length;
+    let arr=[];
+    let ans=0;
+    let sum=1;  //连续子数组和
+    for (let i=0;i<n;i++){
+        if (nums[i]<k) {
+            while (arr.length>0 && sum*nums[i]>=k){
+                sum/=arr.shift();
+            }
+            arr.push(nums[i]);
+            sum*=nums[i];
+            ans+=arr.length;
+        }else{
+            arr=[];
+            sum=1;
+        }
+    }
+    return ans;
+};
+
+let nums = [100,2,3,4,100,5,6,7,100], k = 100;
+let result=numSubarrayProductLessThanK(nums,k);
+console.log(result);
+```
+
+不使用额外空间
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var numSubarrayProductLessThanK = function(nums, k) {
+    let ans=0;
+    let sum=1;  //连续子数组和
+    let i=0;
+    for (let j=0;j<nums.length;j++){
+        if (nums[j]<k) {
+            while (i<j && sum*nums[j]>=k){
+                sum/=nums[i];
+                i++;
+            }
+            sum*=nums[j];
+            ans+=(j-i+1);
+        }else{
+            i=j+1;
+            sum=1;
+        }
+    }
+    return ans;
+};
+
+let nums = [100,2,3,4,100,5,6,7,100], k = 100;
+let result=numSubarrayProductLessThanK(nums,k);
+console.log(result);
+```
+
 
 
 ## 717.  比特与2比特字符
