--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -495,3 +495,203 @@ CSS像素*DPR = 物理像素
 
 ---
 
+## 2.1 请问有哪些CSS浏览器兼容问题以及解决方案？
+
+目前，浏览器厂商众多，Chrome，Frirefox，Safari，Edge，IE6……对于同一段CSS代码，不同厂商、甚至同一厂商不同版本的解析效果极大可能不一致，其根本原因是浏览器内核不同，这就导致了页面显示效果不统一，产生了CSS兼容性问题
+
+目前对兼容问题的解决方案：
+
+- **浏览器CSS样式初始化**
+
+在所有CSS开始前，对某些属性初始化，以防不同浏览器的显示效果不一样，通常不推荐一味地使用通配符统一初始化样式
+
+```css
+*{
+ margin: 0;
+ padding: 0;
+}
+```
+
+- **浏览器私有属性**
+
+可直接在某个属性中额外添加浏览器私有写法，确保浏览器能识别该属性值，有两种开发思路，分别是渐近增强和优雅降级
+
+**渐进增强：**先写某些特殊浏览器能识别的私有属性，再写通用写法确保大部分浏览器能正常显示
+
+```html
+<style type="text/css">
+.test {
+  -webkit-transform:rotate(-3deg); /*Chrome/Safari*/
+  -moz-transform:rotate(-3deg); /*Firefox*/
+  -ms-transform:rotate(-3deg); /*IE*/
+  -o-transform:rotate(-3deg); /*Opera*/
+   transform:rotate(-3deg);
+  background-color: #fe3388;
+  width: 300px;
+  height: 300px;
+}
+</style>
+<body>
+<div class="test"></div>
+</body>
+```
+
+**优雅降级：**先确保大部分浏览器能正常显示，再写某些特殊浏览器能识别的私有属性
+
+```html
+<style type="text/css">
+.test {
+  width: 300px;
+  height: 300px;
+  background-color: #fe3388;
+  transform:rotate(-3deg);
+  -webkit-transform:rotate(-3deg); /*Chrome/Safari*/
+  -moz-transform:rotate(-3deg); /*Firefox*/
+  -ms-transform:rotate(-3deg); /*IE*/
+  -o-transform:rotate(-3deg); /*Opera*/
+}
+</style>
+<body>
+<div class="test"></div>
+```
+
+- **CSS hack语法（**一般情况下，尽量避免使用CSS hack，过多滥用会造成html文档混乱，不易管理与维护）
+
+1. 条件hack，IE浏览器专有的hack方式，微软官方推荐
+
+```css
+<!--[if IE]> 	
+这段文字只在IE浏览器显示 	
+<![endif]-->
+<!--[if gte IE 6]> 	
+这段文字只在IE6以上(包括)版本IE浏览器显示 	
+<![endif]-->
+```
+
+  **2.** **属性级hack** CSS样式属性名前加上一些只有特定浏览器才能识别的hack前缀，以达到预期的页面展现效果
+
+```css
+.test {
+  color: red; /* All browsers */
+  *color: blue;  /* IE7，IE6 */
+  _color: skyblue;  /* IE6 */
+}
+```
+
+  **3.** **选择符级hack，**在CSS选择器前加上一些只有某些特定浏览器才能识别的前缀
+
+```css
+*html /* *前缀只对IE6生效*/
+*+html /* *+前缀只对IE7生效*/
+@media screen\9{...} /*只对IE6/7生效*/
+@media \0screen {body { background: red; }} /*只对IE8有效*/
+@media \0screen\,screen\9{body { background: blue; }} /*只对IE6/7/8有效*/
+@media screen\0 {body { background: green; }} /*只对IE8/9/10有效*/
+@media screen and (min-width:0\0) {body { background: gray; }} /*只对IE9/10有效*/ 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {body { background: orange; }} /*只对IE10有效*/
+```
+
+- **自动化插件**
+
+在解析CSS文件时，插件会自动添加浏览器前缀至CSS代码中，如Autoprefixer
+
+---
+
+## 2.2 请问Flex的常见写法：flex:1表达什么含义？
+
+虽说Flex具有众多属性，但在实际开发常简写为：flex：1，再结合display：flex，就能轻松打造出自适应布局，这也是Flex布局最大的优势。实际上flex为：flex-grow flex-shrink flex-basic三者的缩写。
+
+flex-grow：定义在分配多余空间时，盒子的放大比例，默认为0，即存在剩余空间，也不放大
+
+flex-shrink：定义在分配多余空间时，盒子的缩小比例（多余空间可能是负值），默认为1，即空间不足将缩小
+
+flex-basis：定义在分配多余空间之前，盒子占据的主轴空间（可理解为基准值），通常根据该属性计算多余空间，默认为auto，即盒子自身大小
+
+flex取值不同，空间分配计算值不同，有以下几种常见情况：
+
+|                | flex-grow | flex-shrink | flex-basis | 解释                                                         |
+| -------------- | --------- | ----------- | ---------- | ------------------------------------------------------------ |
+| flex: 2 3 23px | 2         | 3           | 23px       | 当flex有三个值时，则依次分配给flex-grow、flex-shrink、flex-basic |
+| flex: none     | 0         | 0           | auto       | 当 flex 为none时，则计算值为0 0 auto                         |
+| flex: auto     | 1         | 1           | auto       | 当 flex 为auto时，则计算值为1 1 auto                         |
+| flex: 1        | 1         | 1           | 0%         | 当 flex 为一个非负数字，该数字为 flex-grow 值，flex-shrink 取 1，flex-basis 取 0% |
+| flex: 0%       | 1         | 1           | 0%         | 当 flex 为一个长度或百分比，该数字为 flex-basis 值，flex-grow 取 1，flex-shrink 取 1 |
+| flex: 23px     | 1         | 1           | 23px       |                                                              |
+| flex: 2 3      | 2         | 3           | 0%         | 当 flex 为两个非负数字，则分别为 flex-grow 和 flex-shrink 的值，flex-basis 取 0% |
+| flex: 2 23px   | 2         | 1           | 23px       | 当 flex 为一个非负数字和一个长度或百分比，则分别视为 flex-grow 和 flex-basis 的值，flex-shrink 取 1 |
+
+关于 flex-basis 的取值情况：
+
+- auto：盒子本身大小
+- 百分比：根据其包含块（即伸缩父容器）的主尺寸计算
+- 0：盒子本身大小，当盒子大小未定义时，按其内容来来计算
+- 可以代替width属性定义盒子大小，同时声明width属性和flex-basic属性时，会以flex-basic的值来计算
+
+针对以下Flex布局，算出三个盒子自适应后的最终宽度。
+
+```html
+<style type="text/css">
+.parent {
+    display: flex;
+    width: 600px;
+}
+.item-1 {
+    width: 140px;
+    flex: 2 1 0%;
+    background-color: red;
+    height: 50px;
+}
+.item-2 {
+    width: 100px;
+    flex: 2 1 auto;
+    background-color: green;
+    height: 50px;
+}
+.item-3 {
+    flex: 1 1 200px;
+    background-color: blue;
+    height: 50px;
+}
+</style>
+
+<body>
+<div class="parent">
+    <div class="item-1"></div>
+    <div class="item-2"></div>
+    <div class="item-3"></div> 
+</div>
+</body>
+```
+
+```
+主轴上父容器总尺寸： 600px
+
+子元素总基准值（flex-basis）：0% + auto + 200px = 300px，其中
+
+0% 即 600*0% = 0 宽度
+
+auto 对应取盒子自身尺寸：100px
+
+故剩余空间： 600px - 300px = 300px
+
+剩余空间为正，需要扩大子元素，伸缩放大(flex-grow)系数之和为： 2 + 2 + 1 = 5
+
+剩余空间分配如下：
+
+item-1 和 item-2 各分配 2/5，各得 300*2/5 = 120px
+
+item-3 分配 1/5，得 300*1/5 = 60px
+
+各项目最终宽度为：
+
+item-1 = 0% + 120px = 0 + 120px = 120px
+
+item-2 = auto + 120px = 100px + 120px = 220px
+
+item-3 = 200px + 60px = 260px
+```
+
+---
+
+## 2.3 请问清除浮动有哪些常用方法？
+
