--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8143,6 +8143,73 @@ class Node {
 
 ```
 
+## 433. 最小基因变化
+
+基因序列可以表示为一条由 8 个字符组成的字符串，其中每个字符都是 'A'、'C'、'G' 和 'T' 之一。
+
+假设我们需要调查从基因序列 start 变为 end 所发生的基因变化。一次基因变化就意味着这个基因序列中的一个字符发生了变化。
+
+例如，"AACCGGTT" --> "AACCGGTA" 就是一次基因变化。
+另有一个基因库 bank 记录了所有有效的基因变化，只有基因库中的基因才是有效的基因序列。
+
+给你两个基因序列 start 和 end ，以及一个基因库 bank ，请你找出并返回能够使 start 变化为 end 所需的最少变化次数。如果无法完成此基因变化，返回 -1 。
+
+注意：起始基因序列 start 默认是有效的，但是它并不一定会出现在基因库中。
+
+```js
+/**
+ * @param {string} start
+ * @param {string} end
+ * @param {string[]} bank
+ * @return {number}
+ */
+var minMutation = function(start, end, bank) {
+    if (start===end) {
+        return 0;
+    }
+    const cnt=new Set();
+    const visited=new Set();
+    const keys=['A','G','C','T'];
+    for (let s of bank){
+        cnt.add(s);
+    }
+    if (!cnt.has(end)) {
+        return -1;
+    }
+    const queue=[start];
+    visited.add(start);
+    let step=1;
+    while(queue.length){
+        let sz=queue.length;
+        for(let i=0;i<sz;i++){
+            let curr=queue.shift();
+            for(let j=0;j<8;j++){
+                for(let k=0;k<4;k++){
+                    if (keys[k]!==curr[j]) {
+                        let sb=[...curr];
+                        sb[j]=keys[k];
+                        let next=sb.join("");
+                        if (!visited.has(next) && cnt.has(next)) {
+                            if (next===end) {
+                                return step;
+                            }
+                            queue.push(next);
+                            visited.add(next);
+                        }
+                    }
+                }
+            }
+        }
+        step++;
+    }
+    return -1;
+};
+
+let start = "AACCGGTT", end = "AAACGGTA", bank = ["AACCGGTA","AACCGCTA","AAACGGTA"];
+let result=minMutation(start,end,bank);
+console.log(result);
+```
+
 
 
 ## 472. 连接词
@@ -10799,6 +10866,48 @@ console.log(result);
 //console.log("Z".charCodeAt());  //90
 
 ```
+
+933. 最近的请求次数
+写一个 RecentCounter 类来计算特定时间范围内最近的请求。
+
+请你实现 RecentCounter 类：
+
+RecentCounter() 初始化计数器，请求数为 0 。
+int ping(int t) 在时间 t 添加一个新请求，其中 t 表示以毫秒为单位的某个时间，并返回过去 3000 毫秒内发生的所有请求数（包括新请求）。确切地说，返回在 [t-3000, t] 内发生的请求数。
+保证 每次对 ping 的调用都使用比之前更大的 t 值。
+
+提示：
+
+1 <= t <= 109
+保证每次对 ping 调用所使用的 t 值都 严格递增
+至多调用 ping 方法 104 次
+
+```js
+var RecentCounter = function() {
+    this.requests=[];
+};
+
+/** 
+ * @param {number} t
+ * @return {number}
+ */
+RecentCounter.prototype.ping = function(t) {
+    this.requests.push(t);
+    while(this.requests.length>1 && t-3000>this.requests[0]){
+        this.requests.shift();
+    }
+    return this.requests.length;
+};
+
+/**
+ * Your RecentCounter object will be instantiated and called as such:
+ * var obj = new RecentCounter()
+ * var param_1 = obj.ping(t)
+ */
+
+```
+
+
 
 ## 937. 重新排列日志文件
 
