--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -695,3 +695,1073 @@ item-3 = 200px + 60px = 260px
 
 ## 2.3 请问清除浮动有哪些常用方法？
 
+目前常用清除浮动的方法主要有：
+
+  **1.** **给父元素添加 overflow：hidden（BFC布局）**
+
+overflow：hidden为隐藏溢出，当内容超过其父元素时，可以用该方式将溢出的部分裁剪掉，使页面更加美观
+
+当子元素浮动，给父元素添加overflow：hidden，按照该属性特性，将子元素超出的部分截掉，但是子元素有浮动，无法裁剪，只能父元素增加高度去包裹住子元素，从而使得父元素拥有高度，且高度随子元素自适应变化，从而清除浮动效果
+
+代码比较简洁，可以通过触发BFC方式，但是因为本身overflow的本质是溢出隐藏的效果，所以有的时候也会有一些问题存在，比如内容增多的时候不会自动换行导致内容被隐藏掉，无法显示出要溢出的元素。
+
+```html
+<style type="text/css">
+.wrap {
+    width: 520px;
+    border: 1px solid black;
+    margin: 0 auto;
+    overflow: hidden;
+    /* 加上这句话，就可以清除浮动   overflow = hidden|auto|scroll 都可以实现*/
+}
+.float{
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  float: left;
+}
+.nofloat{
+  width: 300px;
+  height: 150px;
+  background-color: gray;
+  overflow: hidden;
+}
+</style>
+
+<body>
+<div class="wrap">
+   <div class="float">浮动</div>
+   <div class="nofloat">不想被浮动影响</div>
+</div>
+</body>
+```
+
+这里父容器是没有设置固定高度的，本来第一个子元素浮动之后，父元素的高度会塌陷到跟第二个子元素一样高，但由于这里分别给第二个子元素和父元素都设置了overflow:hidden ，所以它们都生成了一个新的BFC区域，根据上文提供的BFC布局规则可以得知：BFC区域不会与float box 重叠；计算BFC高度时浮动元素的高度也参与计算。所以就得到清除浮动的效果。说得比较绕，但其实清除浮动得根据自己开发中的实际情况合理使用。  
+
+**2. 给需要清除浮动元素添加clear:both**
+
+clear:both：元素的左侧和右侧均不允许出现浮动元素（摘自W3C），添加了 clear属性的元素只能通过调整自身来使自己不要和浮动元素排列在一起，不能移动别的元素。若一个元素同时设置了 float：left 和 clear：left，左边不能有浮动元素，那么这个元素就要调整自己，排到下一行，因设置了 float: left，这个元素会往左边靠拢，所以这个元素会跑到下一行，同时往左浮动
+
+```css
+.wrap {
+    width: 520px;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+.float{
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  float: left;
+}
+.nofloat{
+  width: 300px;
+  height: 150px;
+  background-color: gray;
+  clear: both;
+}
+```
+
+  **3. 给浮动元素下方添加空盒子**
+
+给该空盒子清除浮动（一般用clear:both），把父元素撑开，需要注意：必须是块级元素，此方法早期比较常用，会给页面增加无意义标签，通常不建议页面中设置多个无意义标签。
+
+```html
+<style type="text/css">
+.wrap {
+    width: 520px;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+.float{
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  float: left;
+}
+.nofloat{
+  width: 300px;
+  height: 150px;
+  background-color: gray;
+}
+.clear{
+  clear: both;
+}
+</style>
+
+<body>
+<div class="wrap">
+   <div class="float">浮动</div>
+   <div class="clear"></div>
+     <br class="clear" />    <!--也可以使用br等别的块级元素来清除浮动-->
+   <div class="nofloat">不想被浮动影响</div>
+</div>
+</body>
+```
+
+  **4. 利用after伪元素清除浮动::after**
+
+该种方式的原理和方法3一样，添加一个内容为空的伪类，同时清除浮动（一般用clear:both），这里用伪类代替了空盒子，避免增加无意义标签
+
+```html
+<style type="text/css">
+.wrap {
+    width: 520px;
+    border: 1px solid black;
+    margin: 0 auto;
+}
+.float{
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  float: left;
+}
+.nofloat{
+  width: 300px;
+  height: 150px;
+  background-color: gray;
+}
+.clearfix:after{
+  content:".";  /*尽量不要为空，一般写一个点*/
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+   .clearfix {
+    *zoom: 1;   /*  *只有IE6,7识别 */
+}
+</style>
+
+<body>
+<div class="wrap clearfix">
+   <div class="float">浮动</div>
+   <div class="nofloat">不想被浮动影响</div>
+</div>
+```
+
+**5. 利用after伪元素空余字符法**
+
+```css
+.clearfix::after{
+    content:"\200B";   /* content:'\0200'; 也可以 */
+    display:block;
+    height:0;
+    clear:both;
+}
+
+.clearfix {
+    *zoom: 1; 
+}
+```
+
+  **6.** **让父元素也浮动**
+
+以浮制浮，父元素与子元素一起脱离文档流浮动，这样父元素就能自适应子元素高度，此方法有较大弊端，一定会影响父元素之后的元素排列，影响页面整体布局
+
+```css
+.wrap {
+    width: 520px;
+    border: 1px solid black;
+    margin: 0 auto;
+    float: left;
+}
+.float{
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  float: left;
+}
+.nofloat{
+  width: 300px;
+  height: 150px;
+  background-color: gray;
+}
+```
+
+  **7. 给父元素添加固定高度**
+
+此方法仅适用于子元素高度已知并且固定情况
+
+----
+
+## 2.4 请问有哪些常见margin问题，有什么解决办法？
+
+### **1. 父元素margin塌陷,父子边距重合**
+
+边界重叠是指两个或多个盒子(可能相邻也可能嵌套)的相邻边界(其间没有任何非空内容、补白、边框)重合在一起而形成一个单一边界。
+
+只发生在垂直方向，父元素和第一个/最后一个子元素设置了同方向的margin值，两个属性之间没有其他内容进行隔离，导致父元素margin-top/margin-bottom塌陷
+
+父子元素的边界重叠
+
+```html
+<style>
+  .parent {
+    background: #e7a1c5;
+  }
+  .parent .child {
+    background: #c8cdf5;
+    height: 100px;
+    margin-top: 10px;
+  }
+</style>
+<section class="parent">
+  <article class="child"></article>
+</section>
+```
+
+以为期待的效果：
+
+![img](https://static.nowcoder.com/images/activity/2021jxy/front/images/1696b9ade2b71502.png)
+
+而实际上效果如下:
+
+![img](https://static.nowcoder.com/images/activity/2021jxy/front/images/1696b9aded524e48.png)
+
+在这里父元素的高度不是 110px，而是 100px，在这里发生了高度坍塌。
+
+**产生原因：**
+
+ 是如果块元素的 `margin-top` 与它的第一个子元素的 `margin-top` 之间没有 `border`、`padding`、`inline` `content`、 `clearance` 来分隔，或者块元素的 margin-bottom 与它的最后一个子元素的 margin-bottom 之间没有 `border`、`padding`、`inline` `content`、`height`、`min-height`、 `max-height` 分隔，那么外边距会塌陷。子元素多余的外边距会被父元素的外边距截断。
+
+**解决办法**：
+
+父子元素的边界重叠得解决方案： 在父元素上加上 overflow:hidden;使其成为 BFC。
+
+```html
+<style>
+  .parent {
+    background: #e7a1c5;
+    overflow:hidden;
+  }
+  .parent .child {
+    background: #c8cdf5;
+    height: 100px;
+    margin-top: 10px;
+  }
+</style>
+<section class="parent">
+  <article class="child"></article>
+</section>
+```
+
+
+
+常见解决办法：
+
+- 给父级元素设置边框或内边距
+- **触发BFC布局**，改变父级元素渲染规则，将父级元素独立，可给父级盒子添加：position：absolute/fixed、display：inline-block、float：left/right、overflow：hidden等一些触发BFC的属性，但是使用的时候都会带来不同的问题，具体使用中还需根据具体情况选择
+- 给子元素前面添加一个空的兄弟元素，其overflow设为hidden，起隔离作用
+
+```html
+    <style type="text/css">
+      .parent{
+        width: 500px;
+        height: 500px;
+        background-color: blue;
+        margin: 20px;
+      }
+      .child{
+        width: 200px;
+        height: 200px;
+        background-color: orange;
+        margin: 50px;
+      }
+      .sub{
+        overflow: hidden;
+      }
+    </style>
+      </head>
+
+<body>
+<div class="parent">
+  <div class="sub"></div>
+  <div class="child"></div>
+</div>
+```
+
+重叠意义：外边距的重叠只产生在普通流文档的上下外边距之间，这个看起来有点奇怪的规则，其实有其现实意义。设想，当我们上下排列一系列规则的块级元素（如段落P）时，那么块元素之间因为外边距重叠的存在，段落之间就不会产生双倍的距离。
+
+解决方法： 
+
+外层元素padding代替
+内层元素透明边框 border:1px solid transparent;
+内层元素绝对定位 postion:absolute:
+外层元素 overflow:hidden;
+内层元素 加float:left;或display:inline-block;
+内层元素padding:1px;
+
+----
+
+###  **2. 同级元素margin重叠**
+
+只发生在垂直方向，在同一个BFC区域内，相邻的兄弟元素会出现margin重叠情况，通常是上一个盒子的margin-bottom和下一个盒子的margin-top，叠加后的间距通常是：**两者为正取大值**（如下图所示效果），**一正一负/两者为负取两者之和**
+
+![img](https://uploadfiles.nowcoder.com/images/20210930/897353_1632985623694/974EDA43625E4786A64431DC1560371A)
+
+```html
+    <style type="text/css">
+      .parent{
+        width: 500px;
+        height: 800px;
+        background-color: gray;
+        margin: 20px;
+        overflow: hidden;
+      }
+      .child1{
+        width: 200px;
+        height: 200px;
+        background-color: blue;
+        margin: 100px;
+      }
+      .child2{
+        width: 200px;
+        height: 200px;
+        background-color: green;
+        margin: 50px;
+      }
+    </style>
+      </head>
+
+<body>
+<div class="parent">
+  <div class="child1"></div>
+  <div class="child2"></div>
+</div>
+```
+
+**分析原因：**在于child1的margin-bottom的参照元素是child2，而child2的margin-top的参照元素恰好是child1，这就导致了它俩之间的间距就会以两值中最大的那个为实际效果。这个现象其实和我们生活中很多场景很像，仔细想想应该不难理解。
+
+常见解决办法：
+
+触发BFC布局，改变元素渲染规则，将其中一个元素独立出来
+
+**解决方法**：只设置一个元素的margin-top或者margin-bottom，避免margin重叠。 
+
+```
+
+```
+
+---
+
+###  **3. 空元素自身margin重叠**
+
+若一个无内容的空元素，同时设置了margin-top与margin-bottom，则会发生重叠，如下图所示效果
+
+![img](https://uploadfiles.nowcoder.com/images/20210930/897353_1632985644955/FF6C2EB8F4D5CC20E8B3FCF9601FC281)
+
+---
+
+## 2.5 请问display:none、visibility:hidden、opacity:0有什么异同点？
+
+相同点：都可以让网页中某个元素隐藏
+
+不同点：
+
+- **空间占据**
+
+display:none：元素没有被渲染，不存在于Render Tree中，不保留元素位置，在页面上彻底消失，可理解为：看不见摸不到
+
+visibility:hidden：存在于Render Tree中，元素在网页上不可见，但元素位置没有改变，可理解为：看不见但摸得到
+
+opacity:0 ：会占据空间
+
+- **子元素**
+
+display:none：所有子元素都会被隐藏，占据的空间会消失，不可点击，也不可被访问
+
+visibility:hidden：具有继承性，给父元素设置，子元素也会继承，但若重新给子元素设置visibility: visible，子元素又会显示
+
+opacity:0 ：具有继承性，**不能**通过设置子元素的 opacity:1 使其显示
+
+- **DOM结构**
+
+display:none：影响DOM结构，会触发回流，计数器不会计数，浏览器渲染开销大
+
+visibility:hidden：不影响DOM结构，计数器仍运行，只会触发重绘
+
+opacity:0 ：只会触发重绘
+
+- **事件绑定**
+
+display:none和visibility:hidden：元素上绑定的事件无法触发
+
+opacity:0 ：元素上绑定的事件可以触发
+
+---
+
+## 2.6 请问src和href有什么异同点？
+
+相同点：都具有引用功能
+
+不同点：
+
+**href：**表示超文本引用，通常用于link、a等元素，**href是引用和页面关联**，在当前元素和引用资源之间建立联系
+
+**src：**source的缩写，表示资源引用，通常用于img，script，iframe等元素，**指向外部资源的位置**，指向的内部会迁入到文档中当前标签所在的位置；在请求src资源时会将其指向的资源下载并应用到当前文档中，如js脚本，img图片等元素
+
+---
+
+# 页面布局
+
+---
+
+## 3.1 请问定位布局position属性有哪些取值？
+
+定位布局：页面元素CSS样式采用position属性，可在top/bottom/right/left四个方向进行位置移动，从而达到定位效果，position属性可取以下7个值：
+
+  **1. 相对定位 relative**
+
+- 不会使元素脱离文档流（原本位置会被保留，即改变位置也不会占用新位置）
+- 相对于自身原本位置移动（没有定位偏移量则对元素无影响）
+- 不影响元素本身特性（无论块级元素或行内元素，保留其原本特性）
+- 常用于提升层级，从而改变元素覆盖关系，若两个都为定位元素，后面的会覆盖前面
+
+  **2. 绝对定位 absolute**
+
+- 使元素完全脱离文档流（在文档流中不再占原来位置）
+- 行内元素设置定位效果后，支持设置宽高
+- 区块元素设置定位效果后，未设置宽度时由内容撑开宽度
+- 相对于最近一个有定位的父元素进行偏移，如果不存在就逐级向上排查，直到相对于body元素，即相对于浏览器窗口（必须有参照物）
+- 子绝父相，一般配合相对定位使用，（将父元素设置相对定位，子元素相对于父元素偏移）
+- 可提升层级
+
+  **3. 固定定位 fixed**
+
+- 直接相对于浏览器窗口进行“绝对定位”
+- 浮动在页面中，元素位置不会随浏览器窗口滚动条滚动而变化
+- 不会受文档流动影响
+
+  **4. 粘性定位 sticky**
+
+- 基于用户的滚动来定位，在相对定位与绝对定位两者间切换。滚动前相当于position:relative，当页面滚动超出目标区域时，相当于position:fixed，会将元素固定在目标位置
+- 相对于离它最近的具有滚动框的父级元素，如果父级元素都不可以滚动，那相对于浏览器窗口计算偏移量
+- 如top: 50px，在sticky元素到达距离相对定位的元素顶部50px的位置时固定，无论怎么滚动，都不再向上移动
+- 兼容性不好，如Internet Explorer, Edge 15 及更早 IE 版本不支持 sticky 定位，通常需要结合CSS3兼容方案
+
+  **5. 静态定位 static**
+
+- 默认定位，遵循正常的文档流
+- 元素不会受到影响
+
+  **6. 继承值 inherit**
+
+- 从父元素继承 position 属性值
+
+  **7. 初始值 initial**
+
+- initial 关键字可用于任何 HTML 元素上任何 CSS 属性
+- 可将所有CSS属性恢复到初始状态
+
+---
+
+###  **1. fixed定位会出现失效情况吗？有什么解决办法吗？**
+
+存在常见3种fixed定位失效情况：
+
+​     \1. 父元素的transform属性值不为none时，子元素的fixed失效（比较常见，仅在部分浏览器中失效）
+
+​    失效原因：当元素祖先的 transform 属性非 none 时，定位容器由视口改为该祖先（摘自MDN）
+
+​    解决办法：
+
+​    经过实验发现，absolute定位在该情况下不会失效，可利用absolute定位模拟fixed效果，主要实现思路：将html的滚动条禁用，开启body滚动条，对该元素absolute定位，并不设置父级元素定位，会相对document定位，但其滚动条未开启，不会受body滚动影响
+
+​    \2. perspective属性值不为none时（不常见）
+
+​    浏览器都不支持 perspective 属性，Chrome 和 Safari 支持替代的 -webkit-perspective 属性，目前可行办法就是删掉perspective属性
+
+​     \3. 元素的will-change中指定了任意 CSS 属性
+
+​    目前可行办法就是尽量避免给fixed定位元素设置will-change
+
+---
+
+## 3.2 请问你了解浮动布局float属性吗？
+
+浮动布局：为方便页面设计，给元素设置float属性，将元素脱离文档流，浮动框进行左右移动，直至外边缘遇到包含框或者另一个浮动框边缘，再通过margin属性调整位置，float属性可取3个值：left：左浮动、right：右浮动、none：不浮动（默认）
+
+浮动的影响：
+
+- 改变块级元素的排列方式，内容从上下排列显示变成水平排列显示
+- 浮动元素会脱离文档流，不占位，盒子重叠，内容不重叠
+- 浮动的块级元素的宽度由内容撑开，行内元素可设宽高、margin和padding均有效，**可理解为隐式转换为inline-block元素**
+
+---
+
+### 1. 浮动布局最常产生什么问题？
+
+通常父级盒子不设置高度时，高度将由内容或子元素撑开，当子元素浮动脱离文档流后， 父盒子就会出现高度塌陷，边框变成一条线，通常需要清除浮动来解决该问题
+
+---
+
+## 3.3 请问BFC布局有哪些特点、触发条件以及实际应用？
+
+BFC（Block Formatting Context）：格式化上下文，也称BFC布局，是Web页面中盒模型布局的CSS渲染模式，**指一个独立的渲染区域，与其他元素隔离，不受外部布局影响**
+
+BFC布局特点：
+
+- 在BFC区域内，内部盒子会在垂直方向上一个接一个地放置
+- 在BFC区域内，内部盒子垂直方向上的距离由margin决定。（可理解为：属于同一个BFC的两个相邻盒子的上下margin会发生重叠）
+- 同一个BFC区域内，设置了float属性的盒子不会重叠
+- BFC就是页面上的一个隔离的独立容器，容器内外元素互不影响
+- 计算BFC的高度时，区域内的浮动元素也参与计算
+
+BFC布局触发条件（满足任意一个即可形成BFC）：
+
+- 根元素<html>
+- 浮动元素：float不为none
+- 绝对定位元素：position（absolute、fixed）
+- display为inline-block、table-cells、table-caption、flex、inline-flex
+- overflow不为visible（hidden、auto、scroll）
+
+BFC布局实际应用：
+
+- 清除浮动，通过设置overflow:hidden解决父元素坍塌问题
+- 垂直margin合并，BFC区域内两个相邻元素的垂直外边距会发生叠加，**叠加后的外边距为两者外边距的最大值。这样可保持各区域间上下间距一致**，比如多个段落之间与顶部底部的边距保持一致
+- 防止垂直 margin 合并，**反之可以在元素外层包裹一层容器，并触发该容器生成一个新的BFC布局**，与相邻元素隔离开来
+- 实现自适应双栏、三栏布局，利用浮动、定位、Flex布局原理可实现多种自适应布局
+
+---
+
+## 3.4 请问如何将一个<div>盒子在页面垂直水平居中？
+
+### 元素宽高固定时（设元素宽高为100px）：
+
+- **absolute + 负margin**
+
+```html
+<style type="text/css">
+  .box{
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+  }
+</style>
+<body>
+  <div class="box"></div>
+</body>
+```
+
+- **absolute + margin auto**
+
+```css
+  .box{
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+  }
+```
+
+- **absolute + calc()**
+
+```css
+  .box{
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+    position: absolute;
+    top: calc(50% - 50px);
+    left: calc(50% - 50px);
+  }
+```
+
+### 元素宽高未知时：
+
+- absolute + transform
+
+```html
+<style type="text/css">
+  .box{
+    background-color: gray;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+</style>
+<body>
+  <div class="box">元素宽高未知</div>
+</body>
+```
+
+- table，需要先打造一个表格结构，再将盒子放入单元格中，表格单元格中的**内容本身就是垂直居中的**，此法弊端：增加了很多冗余代码
+
+```html
+<style type="text/css">
+  .wrap{
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    text-align: center;
+  }
+  .box{
+    background-color: gray;
+    display: inline-block;
+  }
+</style>
+<body>
+  <body>
+  <table>
+    <tbody>
+      <tr>
+        <td class="wrap">
+          <div class="box">元素宽高未知</div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</body>
+```
+
+- css-table，CSS新增的table属性，直接把普通元素，变为table元素的现实效果，原理与用table一样，但没有那么多的冗余代码
+
+```html
+<style type="text/css">
+  .wrap{
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+  }
+  .box{
+    background-color: gray;
+    display: inline-block;
+  }
+</style>
+<body>
+  <div class="wrap">
+      <div class="box">元素宽高未知</div>
+  </div>
+</body>
+```
+
+- flex布局
+
+```html
+<style type="text/css">
+  .wrap{
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .box{
+    background-color: gray;
+  }
+</style>
+<body>
+  <div class="wrap">
+      <div class="box">元素宽高未知</div>
+  </div>
+</body>
+```
+
+- grid布局，CSS新出的网格布局，代码量少，但兼容性不太好
+
+```html
+<style type="text/css">
+  .wrap{
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    display: grid;
+  }
+  .box{
+    background-color: gray;
+    align-self: center;
+    justify-self: center;
+  }
+</style>
+<body>
+  <div class="wrap">
+      <div class="box">元素宽高未知</div>
+  </div>
+</body>
+```
+
+总结：宽高固定时，推荐absolute + 负margin；宽高不固定，推荐flex
+
+---
+
+## 3.5 请问实现自适应两栏布局（左定宽，右宽度自适应）有哪些方法？
+
+```html
+<style type="text/css">
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+  }
+</style>
+<body>
+  <div class="wrap">
+    <div class="left">左侧固定内容</div>
+    <div class="right">右侧内容自适应</div>
+  </div>
+</body>
+```
+
+- **float**
+
+```css
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+      
+    float: left;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+      
+    margin-left: 200px;
+  }
+```
+
+- **absolute**
+
+```css
+  .wrap{
+    position: relative;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    margin-left: 200px;
+  }
+```
+
+- **table**
+
+```css
+  .wrap{
+    display: table;
+    width: 100%;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    display: table-cell;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    display: table-cell;
+  }
+```
+
+- **calc()**
+
+```css
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    float: left;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    float: left;
+    width: calc(100% - 200px);
+  }
+```
+
+- **inline-block+calc()**
+
+```css
+  .wrap{
+    width: 100%;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    display: inline-block;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    display: inline-block;
+    width: calc(100% - 200px);  /* 谷歌和火狐都不能达到目的*/
+  }
+```
+
+- **flex布局**
+
+```css
+  .wrap{
+    display: flex;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    flex: 0 0 auto;
+  }
+  .right{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    flex: 1;
+  }
+```
+
+---
+
+## 3.6 请问实现自适应三栏布局（左右定宽，中间宽度自适应）有哪些方法？
+
+- 左边左浮动，右边右浮动，中间自适应，需注意：**中间盒子必须放在DOM结构的最后**，若放在第一个，会占据第一行文档流位置，左右两边的盒子只能在第二行浮动
+
+```html
+<style type="text/css">
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    float: left;
+  }
+  .right{
+    width: 400px;
+    height: 200px;
+    background-color: #9899ff;
+
+    float: right;
+  }
+  .center{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    margin: 0 400px 0 200px; /*为左右两盒子留出位置*/
+  }
+</style>
+<body>
+  <div class="wrap">
+    <div class="left">左侧固定内容</div>
+    
+    <div class="right">右侧宽度固定</div>
+    
+    <div class="center">中间宽度自适应</div>
+  </div>
+```
+
+- 左右两盒子绝对定位，中间自适应，三个盒子的先后顺序无要求
+
+```html
+<style type="text/css">
+  .wrap{
+    position: relative;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .right{
+    width: 400px;
+    height: 200px;
+    background-color: #9899ff;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .center{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    margin: 0 400px 0 200px; /*为左右两盒子留出位置*/
+  }
+</style>
+<body>
+  <div class="wrap">
+    <div class="left">左侧固定内容</div>
+    <div class="center">中间宽度自适应</div>
+    <div class="right">右侧宽度固定</div>
+  </div>
+</body>
+```
+
+- flex布局，左右两盒子定宽，中间盒子flex：1，flex-grow：1、flex-shrink：1、flex-basic：0%，中间盒子的宽度：自动分配父元素除去左右盒子后的宽度，其次，弹性布局中盒子默认水平方向排列，需注意：必须最外层加一个大盒子，且中间盒子必须放在中间，按左中右顺序排列
+
+```css
+  .wrap{
+    display: flex;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+  }
+  .right{
+    width: 400px;
+    height: 200px;
+    background-color: #9899ff;
+  }
+  .center{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    flex: 1;  /*等同于flex-grow：1、flex-shrink：1、flex-basic：0%*/
+  }
+```
+
+- 圣杯布局法，浮动+负margin，此方法逻辑上稍复杂，建议大家一步步理解后再实践一下，**center盒子必须放在DOM结构第一个**
+
+```html
+<div class="container">
+    <div class="center"></div>
+    <div class="left"></div>
+    <div class="right"></div>
+</div>
+```
+
+**步骤1：center盒子**宽度100%，左右两边盒子定宽
+
+**步骤2：三个盒子**先设置相对定位，再左浮动，脱离文档流
+
+为什么用relative 而不用 absolute呢？因为**设置absolute会让float失效**，而relative就不存在这个问题
+
+**步骤3：left盒子** margin-left：-100%（直接将left盒子拉到center盒子左边），这里效果不等同取left盒子宽度（left盒子会跑到center盒子右边），margin设置-100%就等价于把left盒子向左移动视窗宽度的距离，等价于left盒子直接放置到最左边
+
+**步骤4：left盒子**会覆盖center盒子左边部分内容，要把center盒子内容拉出来，在外围container加上左右padding，值分别为左右两盒子宽度，此时left盒子也会跟过来，left盒子设置left：-自身盒子宽度
+
+**步骤5：right盒子** margin-left：-自身盒子宽度，移动到center盒子右边，不需要盒子处于最左端，所以不需要-100%，仅让它回到第一行即可
+
+**步骤6：right盒子** right -自身盒子宽度，就可以让它不覆盖center盒子右边部分内容
+
+完整的CSS代码如下：
+
+```html
+<style type="text/css">
+  .wrap{
+    padding: 0 400px 0 200px;
+  }
+  .center,.left,.right{
+    position: relative;
+    float: left;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    margin-left: -100%;
+    left: -200px;
+  }
+  .right{
+    width: 400px;
+    height: 200px;
+    background-color: #9899ff;
+
+    margin-left: -400px;
+    right: -400px;
+  }
+  .center{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    width: 100%;
+  }
+</style>
+<body>
+  <div class="wrap">
+    <div class="center">中间宽度自适应</div>
+    <div class="left">左侧固定内容</div>
+    <div class="right">右侧宽度固定</div>
+  </div>
+</body>
+```
+
+- 双飞翼布局法，前半部分与圣杯布局基本一致，三栏全部float浮动，但左右两盒子加上负margin让其跟中间盒子并排，以形成三栏布局。
+
+**不同处：**对于中间盒子被覆盖问题的解决思路：直接在center盒子内部创建子盒子用于放置内容，对该子盒子设置margin-left和margin-right为左右两盒子留出位置
+
+简单地说，对比圣杯布局，双飞翼布局比圣杯布局多创建了一个div，但不用相对布局
+
+```html
+<style type="text/css">
+  .center,.left,.right{
+    position: relative;
+    float: left;
+  }
+  .left{
+    width: 200px;
+    height: 200px;
+    background-color: #389777;
+
+    margin-left: -100%;
+  }
+  .right{
+    width: 400px;
+    height: 200px;
+    background-color: #9899ff;
+
+    margin-left: -400px;
+  }
+  .center{
+    height: 200px;
+    background-color: #c0c0c0;
+
+    width: 100%;
+  }
+  .main{
+    margin: 0 400px 0 200px;
+  }
+</style>
+<body>
+  <div class="wrap">
+    <div class="center">
+      <div class="main">中间宽度自适应</div>
+    </div>
+    <div class="left">左侧固定内容</div>
+    <div class="right">右侧宽度固定</div>
+  </div>
+</body>
+```
